@@ -1,7 +1,8 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.execution.scratch;
 
 import com.intellij.compiler.options.CompileStepBeforeRun;
+import com.intellij.execution.ExecutionBundle;
 import com.intellij.execution.configurations.RunConfiguration;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
@@ -17,25 +18,25 @@ import com.intellij.openapi.roots.OrderEnumerator;
 import com.intellij.openapi.roots.ProjectRootManager;
 import com.intellij.openapi.util.Computable;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.VirtualFileManager;
+import com.intellij.pom.java.LanguageLevel;
 import com.intellij.psi.*;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.jps.model.java.JpsJavaSdkType;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.Charset;
 import java.util.*;
 
 /**
  * @author Eugene Zhuravlev
  */
-public class JavaScratchCompilationSupport implements CompileTask {
-  public JavaScratchCompilationSupport(CompilerManager compileManager) {
-    compileManager.addAfterTask(this);
-  }
-
+final class JavaScratchCompilationSupport implements CompileTask {
   @Nullable
   public static File getScratchOutputDirectory(Project project) {
     final File root = CompilerManager.getInstance(project).getJavacCompilerWorkingDir();
@@ -49,7 +50,7 @@ public class JavaScratchCompilationSupport implements CompileTask {
   }
 
   @Override
-  public boolean execute(CompileContext context) {
+  public boolean execute(@NotNull CompileContext context) {
     final Project project = context.getProject();
 
     final RunConfiguration configuration = CompileStepBeforeRun.getRunConfiguration(context);
@@ -59,7 +60,7 @@ public class JavaScratchCompilationSupport implements CompileTask {
     final JavaScratchConfiguration scratchConfig = (JavaScratchConfiguration)configuration;
     final String scratchUrl = scratchConfig.getScratchFileUrl();
     if (scratchUrl == null) {
-      context.addMessage(CompilerMessageCategory.ERROR, "Associated scratch file not found", null, -1, -1);
+      context.addMessage(CompilerMessageCategory.ERROR, ExecutionBundle.message("run.java.scratch.associated.file.not.specified"), null, -1, -1);
       return false;
     }
     @Nullable
@@ -67,15 +68,15 @@ public class JavaScratchCompilationSupport implements CompileTask {
     final Sdk targetSdk = module != null? ModuleRootManager.getInstance(module).getSdk() : ProjectRootManager.getInstance(project).getProjectSdk();
     if (targetSdk == null) {
       final String message = module != null?
-                             "Cannot find associated SDK for run configuration module \"" + module.getName() + "\".\nPlease check project settings." :
-                             "Cannot find associated project SDK for the run configuration.\nPlease check project settings.";
+        ExecutionBundle.message("run.java.scratch.missing.jdk.module", module.getName()) :
+        ExecutionBundle.message("run.java.scratch.missing.jdk");
       context.addMessage(CompilerMessageCategory.ERROR, message, scratchUrl, -1, -1);
       return true;
     }
     if (!(targetSdk.getSdkType() instanceof JavaSdkType)) {
       final String message = module != null?
-                             "Expected Java SDK for run configuration module \"" + module.getName() + "\".\nPlease check project settings." :
-                             "Expected Java SDK for project \"" + project.getName() + "\".\nPlease check project settings.";
+        ExecutionBundle.message("run.java.scratch.java.sdk.required.module", module.getName()) :
+        ExecutionBundle.message("run.java.scratch.java.sdk.required.project", project.getName());
       context.addMessage(CompilerMessageCategory.ERROR, message, scratchUrl, -1, -1);
       return true;
     }
@@ -89,6 +90,10 @@ public class JavaScratchCompilationSupport implements CompileTask {
     try {
       final File scratchFile = new File(VirtualFileManager.extractPath(scratchUrl));
       File srcFile = scratchFile;
+
+      VirtualFile vFile = ReadAction.compute(() -> VirtualFileManager.getInstance().findFileByUrl(scratchUrl));
+      Charset charset = ReadAction.compute(() -> vFile == null ? null : vFile.getCharset());
+
       if (!StringUtil.endsWith(srcFile.getName(), ".java")) {
 
         final File srcDir = getScratchTempDirectory(project);
@@ -98,7 +103,6 @@ public class JavaScratchCompilationSupport implements CompileTask {
         FileUtil.delete(srcDir); // perform cleanup
 
         final String srcFileName = ReadAction.compute(() -> {
-          final VirtualFile vFile = VirtualFileManager.getInstance().findFileByUrl(scratchUrl);
           if (vFile != null) {
             final PsiFile psiFile = PsiManager.getInstance(project).findFile(vFile);
             if (psiFile instanceof PsiJavaFile) {
@@ -121,7 +125,7 @@ public class JavaScratchCompilationSupport implements CompileTask {
               }
             }
           }
-          return FileUtil.getNameWithoutExtension(scratchFile);
+          return FileUtilRt.getNameWithoutExtension(scratchFile.getName());
         });
         srcFile = new File(srcDir, srcFileName + ".java");
         FileUtil.copy(scratchFile, srcFile);
@@ -136,8 +140,10 @@ public class JavaScratchCompilationSupport implements CompileTask {
                                                                          : () -> ProjectRootManager.getInstance(project).orderEntries();
 
       ApplicationManager.getApplication().runReadAction(() -> {
-        for (String s : orderEnumerator.compute().compileOnly().recursively().exportedOnly().withoutSdk().getPathsList().getPathList()) {
-          cp.add(new File(s));
+        if (module != null || scratchConfig.isBuildProjectOnEmptyModuleList()) {
+          for (String s : orderEnumerator.compute().compileOnly().recursively().exportedOnly().withoutSdk().getPathsList().getPathList()) {
+            cp.add(new File(s));
+          }
         }
         for (String s : orderEnumerator.compute().compileOnly().sdkOnly().getPathsList().getPathList()) {
           platformCp.add(new File(s));
@@ -148,16 +154,23 @@ public class JavaScratchCompilationSupport implements CompileTask {
       options.add("-g"); // always compile with debug info
       final JavaSdkVersion sdkVersion = JavaSdk.getInstance().getVersion(targetSdk);
       if (sdkVersion != null) {
-        final String langLevel = JpsJavaSdkType.complianceOption(sdkVersion.getMaxLanguageLevel().toJavaVersion());
+        final LanguageLevel level = sdkVersion.getMaxLanguageLevel();
+        final String langLevel = JpsJavaSdkType.complianceOption(level.toJavaVersion());
         options.add("-source");
         options.add(langLevel);
         options.add("-target");
         options.add(langLevel);
+        if (level.isPreview()) {
+          options.add("--enable-preview");
+        }
       }
       options.add("-proc:none"); // disable annotation processing
-
+      if (charset != null) {
+        options.add("-encoding");
+        options.add(charset.name());
+      }
       final Collection<ClassObject> result = CompilerManager.getInstance(project).compileJavaCode(
-        options, platformCp, cp, Collections.emptyList(), Collections.emptyList(), files, outputDir
+        options, platformCp, cp, Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), files, outputDir
       );
       for (ClassObject classObject : result) {
         final byte[] bytes = classObject.getContent();
