@@ -1,101 +1,71 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.internal;
 
-import com.intellij.concurrency.JobScheduler;
+import com.intellij.ide.plugins.PluginManagerCore;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationType;
 import com.intellij.notification.Notifications;
-import com.intellij.openapi.application.ex.ApplicationEx;
-import com.intellij.openapi.application.ex.ApplicationManagerEx;
+import com.intellij.openapi.application.Application;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.Pair;
-import sun.misc.VMSupport;
+import com.intellij.util.concurrency.AppExecutorUtil;
+import com.intellij.util.containers.ContainerUtil;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.lang.management.ManagementFactory;
-import java.util.List;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Properties;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-/**
- * @author egor
- */
-public class DebugAttachDetector {
+public final class DebugAttachDetector {
   private static final Logger LOG = Logger.getInstance(DebugAttachDetector.class);
+  private Properties myAgentProperties = null;
 
-  private String myHost;
-  private int myPort = -1;
   private ScheduledFuture<?> myTask;
   private boolean myAttached;
   private boolean myReady;
 
-  public static Pair<String, Integer> getAttachAddress(List<String> arguments) {
-    String host = null;
-    int port = -1;
-    for (String argument : arguments) {
-      if (argument.startsWith("-agentlib:jdwp") && argument.contains("transport=dt_socket")) {
-        String[] params = argument.split(",");
-        for (String param : params) {
-          if (param.startsWith("address")) {
-            try {
-              String[] address = param.split("=")[1].split(":");
-              if (address.length == 1) {
-                port = Integer.parseInt(address[0]);
-              }
-              else {
-                host = address[0];
-                port = Integer.parseInt(address[1]);
-              }
-            }
-            catch (Exception e) {
-              LOG.error(e);
-              return null;
-            }
-            break;
-          }
-        }
-        break;
+  public DebugAttachDetector() {
+    Class<?> vmSupportClass;
+    try {
+      vmSupportClass = Class.forName("jdk.internal.vm.VMSupport");
+    }
+    catch (Exception e) {
+      try {
+        vmSupportClass = Class.forName("sun.misc.VMSupport");
+      }
+      catch (Exception ignored) {
+        LOG.warn("Unable to init DebugAttachDetector, VMSupport class not found");
+        return;
       }
     }
-    if (port > -1) {
-      return Pair.create(host, port);
+
+    Application app = ApplicationManager.getApplication();
+    try {
+      myAgentProperties = (Properties)vmSupportClass.getMethod("getAgentProperties").invoke(null);
     }
-    return null;
-  }
+    catch (NoSuchMethodException | InvocationTargetException ex) {
+      LOG.error(ex);
+    }
+    catch (IllegalAccessException ex) {
+      if (app.isInternal() && !PluginManagerCore.isRunningFromSources()) {
+        LOG.warn("Unable to start DebugAttachDetector, please add `--add-exports java.base/jdk.internal.vm=ALL-UNNAMED` to VM options");
+      }
+    }
 
-  public DebugAttachDetector() {
-    ApplicationEx app = ApplicationManagerEx.getApplicationEx();
-    if (!app.isInternal()
-        || app.isUnitTestMode()
-        || app.isHeadlessEnvironment()
-        || Boolean.getBoolean("disable.attach.detector")
-        || Boolean.getBoolean("idea.debug.mode")) return;
+    if (myAgentProperties == null ||
+        !app.isInternal() ||
+        app.isUnitTestMode() ||
+        Boolean.getBoolean("disable.attach.detector") ||
+        PluginManagerCore.isRunningFromSources() ||
+        !isDebugEnabled()) {
+      return;
+    }
 
-    Pair<String, Integer> attachAddress = getAttachAddress(ManagementFactory.getRuntimeMXBean().getInputArguments());
-    if (attachAddress == null) return;
-    myHost = attachAddress.first;
-    myPort = attachAddress.second;
-
-    myTask = JobScheduler.getScheduler().scheduleWithFixedDelay(() -> {
-      String property = VMSupport.getAgentProperties().getProperty("sun.jdwp.listenerAddress");
-
-      // leads to garbage in IDEA console, see IDEA-158940
-      // boolean attached = !NetUtils.canConnectToRemoteSocket(myHost, myPort);
-
-      boolean attached = property != null && property.isEmpty();
+    myTask = AppExecutorUtil.getAppScheduledExecutorService().scheduleWithFixedDelay(() -> {
+      boolean attached = isAttached(myAgentProperties);
       if (!myReady) {
         myAttached = attached;
         myReady = true;
@@ -108,5 +78,39 @@ public class DebugAttachDetector {
                                                   NotificationType.WARNING));
       }
     }, 5, 5, TimeUnit.SECONDS);
+  }
+
+  private static boolean isAttached(@NotNull Properties properties) {
+    String property = properties.getProperty("sun.jdwp.listenerAddress");
+    return property != null && property.isEmpty();
+  }
+
+  @Nullable
+  private static final String DEBUG_ARGS = getDebugArgs();
+
+  private static String getDebugArgs() {
+    return ContainerUtil.find(ManagementFactory.getRuntimeMXBean().getInputArguments(), s -> s.contains("-agentlib:jdwp"));
+  }
+
+  public static boolean isDebugEnabled() {
+    return DEBUG_ARGS != null;
+  }
+
+  private static boolean isDebugServer() {
+    return DEBUG_ARGS != null && DEBUG_ARGS.contains("server=y");
+  }
+
+  public static boolean isAttached() {
+    if (!isDebugEnabled()) {
+      return false;
+    }
+    if (!isDebugServer()) {
+      return true;
+    }
+    Properties properties = ApplicationManager.getApplication().getService(DebugAttachDetector.class).myAgentProperties;
+    if (properties == null) { // For now return true if can not detect
+      return true;
+    }
+    return isAttached(properties);
   }
 }
