@@ -1,4 +1,4 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.fileEditor.impl;
 
 import com.intellij.ide.ui.UISettings;
@@ -8,182 +8,267 @@ import com.intellij.openapi.command.CommandEvent;
 import com.intellij.openapi.command.CommandListener;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.impl.CommandMerger;
-import com.intellij.openapi.components.*;
+import com.intellij.openapi.components.PersistentStateComponent;
+import com.intellij.openapi.components.State;
+import com.intellij.openapi.components.Storage;
+import com.intellij.openapi.components.StoragePathMacros;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
+import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.EditorFactory;
-import com.intellij.openapi.editor.event.*;
+import com.intellij.openapi.editor.RangeMarker;
+import com.intellij.openapi.editor.event.CaretEvent;
+import com.intellij.openapi.editor.event.DocumentEvent;
+import com.intellij.openapi.editor.event.EditorEventListener;
+import com.intellij.openapi.editor.event.EditorEventMulticaster;
+import com.intellij.openapi.extensions.ExtensionPointListener;
+import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.fileEditor.*;
 import com.intellij.openapi.fileEditor.ex.FileEditorManagerEx;
+import com.intellij.openapi.fileEditor.ex.FileEditorWithProvider;
 import com.intellij.openapi.fileEditor.ex.IdeDocumentHistory;
+import com.intellij.openapi.fileEditor.impl.text.TextEditorProvider;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.project.ProjectUtil;
+import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.vfs.*;
+import com.intellij.openapi.vfs.LocalFileSystem;
+import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.vfs.VirtualFileManager;
+import com.intellij.openapi.vfs.newvfs.BulkFileListener;
+import com.intellij.openapi.vfs.newvfs.events.VFileDeleteEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFileEvent;
 import com.intellij.openapi.wm.ToolWindowManager;
 import com.intellij.psi.ExternalChangeAction;
 import com.intellij.testFramework.LightVirtualFile;
-import gnu.trove.THashSet;
+import com.intellij.ui.SimpleColoredComponent;
+import com.intellij.ui.SimpleTextAttributes;
+import com.intellij.util.concurrency.SynchronizedClearableLazy;
+import com.intellij.util.io.*;
+import com.intellij.util.messages.MessageBus;
+import com.intellij.util.messages.MessageBusConnection;
+import com.intellij.util.messages.Topic;
+import com.intellij.util.text.DateFormatUtil;
+import com.intellij.util.xmlb.annotations.XCollection;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.annotations.TestOnly;
 
+import java.io.IOException;
 import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
+import java.nio.file.Path;
 import java.util.*;
+import java.util.function.Predicate;
 
-@State(name = "IdeDocumentHistory", storages = @Storage(StoragePathMacros.WORKSPACE_FILE))
-public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements ProjectComponent, Disposable, PersistentStateComponent<IdeDocumentHistoryImpl.RecentlyChangedFilesState> {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.openapi.fileEditor.impl.IdeDocumentHistoryImpl");
+@State(name = "IdeDocumentHistory", storages = @Storage(StoragePathMacros.PRODUCT_WORKSPACE_FILE), reportStatistic = false)
+public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Disposable, PersistentStateComponent<IdeDocumentHistoryImpl.RecentlyChangedFilesState> {
+  private static final Logger LOG = Logger.getInstance(IdeDocumentHistoryImpl.class);
 
   private static final int BACK_QUEUE_LIMIT = Registry.intValue("editor.navigation.history.stack.size");
   private static final int CHANGE_QUEUE_LIMIT = Registry.intValue("editor.navigation.history.stack.size");
 
   private final Project myProject;
 
-  private final EditorFactory myEditorFactory;
   private FileDocumentManager myFileDocumentManager;
-  private FileEditorManagerEx myEditorManager;
-  private final VirtualFileManager myVfManager;
-  private final CommandProcessor myCmdProcessor;
-  private final ToolWindowManager myToolWindowManager;
 
   private final LinkedList<PlaceInfo> myBackPlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
   private final LinkedList<PlaceInfo> myForwardPlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
   private boolean myBackInProgress;
   private boolean myForwardInProgress;
   private Object myLastGroupId;
+  private boolean myRegisteredBackPlaceInLastGroup;
 
   // change's navigation
   private final LinkedList<PlaceInfo> myChangePlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
-  private int myStartIndex;
   private int myCurrentIndex;
-  private PlaceInfo myCurrentChangePlace;
 
   private PlaceInfo myCommandStartPlace;
   private boolean myCurrentCommandIsNavigation;
   private boolean myCurrentCommandHasChanges;
-  private final Set<VirtualFile> myChangedFilesInCurrentCommand = new THashSet<>();
+  private final Set<VirtualFile> myChangedFilesInCurrentCommand = new HashSet<>();
   private boolean myCurrentCommandHasMoves;
 
-  private final CommandListener myCommandListener = new CommandListener() {
-    @Override
-    public void commandStarted(CommandEvent event) {
-      onCommandStarted();
-    }
+  private final SynchronizedClearableLazy<PersistentHashMap<String, Long>> recentFileTimestampMap;
 
-    @Override
-    public void commandFinished(CommandEvent event) {
-      onCommandFinished(event.getCommandGroupId());
-    }
-  };
+  private final RecentlyChangedFilesState state = new RecentlyChangedFilesState();
 
-  private RecentlyChangedFilesState myRecentlyChangedFiles = new RecentlyChangedFilesState();
-
-  public IdeDocumentHistoryImpl(@NotNull Project project,
-                                @NotNull EditorFactory editorFactory,
-                                @NotNull FileEditorManager editorManager,
-                                @NotNull VirtualFileManager vfManager,
-                                @NotNull CommandProcessor cmdProcessor,
-                                @NotNull ToolWindowManager toolWindowManager) {
+  public IdeDocumentHistoryImpl(@NotNull Project project) {
     myProject = project;
-    myEditorFactory = editorFactory;
-    myEditorManager = (FileEditorManagerEx)editorManager;
-    myVfManager = vfManager;
-    myCmdProcessor = cmdProcessor;
-    myToolWindowManager = toolWindowManager;
-  }
 
-  @Override
-  public final void projectOpened() {
-    myEditorManager = (FileEditorManagerEx)FileEditorManager.getInstance(myProject);
-    EditorEventMulticaster eventMulticaster = myEditorFactory.getEventMulticaster();
-
-    eventMulticaster.addDocumentListener(new DocumentListener() {
-      @Override
-      public void documentChanged(DocumentEvent e) {
-        onDocumentChanged(e);
-      }
-    }, myProject);
-
-    eventMulticaster.addCaretListener(new CaretListener() {
-      @Override
-      public void caretPositionChanged(CaretEvent e) {
-        onCaretPositionChanged(e);
-      }
-    }, myProject);
-
-    myProject.getMessageBus().connect().subscribe(FileEditorManagerListener.FILE_EDITOR_MANAGER, new FileEditorManagerListener() {
+    MessageBusConnection busConnection = project.getMessageBus().connect(this);
+    busConnection.subscribe(FileEditorManagerListener.FILE_EDITOR_MANAGER, new FileEditorManagerListener() {
       @Override
       public void selectionChanged(@NotNull FileEditorManagerEvent e) {
         onSelectionChanged();
       }
     });
-
-    VirtualFileListener fileListener = new VirtualFileListener() {
+    busConnection.subscribe(VirtualFileManager.VFS_CHANGES, new BulkFileListener() {
       @Override
-      public void fileDeleted(@NotNull VirtualFileEvent event) {
-        onFileDeleted();
+      public void after(@NotNull List<? extends VFileEvent> events) {
+        for (VFileEvent event : events) {
+          if (event instanceof VFileDeleteEvent) {
+            removeInvalidFilesFromStacks();
+            return;
+          }
+        }
+      }
+    });
+    busConnection.subscribe(CommandListener.TOPIC, new CommandListener() {
+      @Override
+      public void commandStarted(@NotNull CommandEvent event) {
+        onCommandStarted();
+      }
+
+      @Override
+      public void commandFinished(@NotNull CommandEvent event) {
+        onCommandFinished(event.getProject(), event.getCommandGroupId());
+      }
+    });
+
+    EditorEventListener listener = new EditorEventListener() {
+      @Override
+      public void documentChanged(@NotNull DocumentEvent e) {
+        Document document = e.getDocument();
+        final VirtualFile file = getFileDocumentManager().getFile(document);
+        if (file != null && !(file instanceof LightVirtualFile) && !ApplicationManager.getApplication().hasWriteAction(ExternalChangeAction.class)) {
+          if (!ApplicationManager.getApplication().isDispatchThread()) {
+            LOG.error("Document update for physical file not in EDT: " + file);
+          }
+          myCurrentCommandHasChanges = true;
+          myChangedFilesInCurrentCommand.add(file);
+        }
+      }
+
+      @Override
+      public void caretPositionChanged(@NotNull CaretEvent e) {
+        if (e.getOldPosition().line == e.getNewPosition().line) {
+          return;
+        }
+
+        Document document = e.getEditor().getDocument();
+        if (getFileDocumentManager().getFile(document) != null) {
+          myCurrentCommandHasMoves = true;
+        }
       }
     };
-    myVfManager.addVirtualFileListener(fileListener,myProject);
-    myCmdProcessor.addCommandListener(myCommandListener,myProject);
+
+    recentFileTimestampMap = new SynchronizedClearableLazy<>(() -> initRecentFilesTimestampMap(myProject));
+
+    EditorEventMulticaster multicaster = EditorFactory.getInstance().getEventMulticaster();
+    multicaster.addDocumentListener(listener, this);
+    multicaster.addCaretListener(listener, this);
+
+    FileEditorProvider.EP_FILE_EDITOR_PROVIDER.addExtensionPointListener(new ExtensionPointListener<FileEditorProvider>() {
+      @Override
+      public void extensionRemoved(@NotNull FileEditorProvider provider, @NotNull PluginDescriptor pluginDescriptor) {
+        String editorTypeId = provider.getEditorTypeId();
+        Predicate<PlaceInfo> clearStatePredicate = e -> editorTypeId.equals(e.getEditorTypeId());
+        if (myChangePlaces.removeIf(clearStatePredicate)) {
+          myCurrentIndex = myChangePlaces.size();
+        }
+        myBackPlaces.removeIf(clearStatePredicate);
+        myForwardPlaces.removeIf(clearStatePredicate);
+      }
+    }, this);
   }
 
-  public static class RecentlyChangedFilesState {
-    // don't make it private, see: IDEA-130363 Recently Edited Files list should survive restart
-    @SuppressWarnings("WeakerAccess") public List<String> CHANGED_PATHS = new ArrayList<>();
+  protected FileEditorManagerEx getFileEditorManager() {
+    return FileEditorManagerEx.getInstanceEx(myProject);
+  }
 
-    public void register(VirtualFile file) {
-      final String path = file.getPath();
-      CHANGED_PATHS.remove(path);
-      CHANGED_PATHS.add(path);
-      trimToSize();
+  private @NotNull static PersistentHashMap<String, Long> initRecentFilesTimestampMap(@NotNull Project project) {
+    Path file = ProjectUtil.getProjectCachePath(project, "recentFilesTimeStamps.dat");
+    try {
+      return IOUtil.openCleanOrResetBroken(() -> createMap(file), file);
+    }
+    catch (IOException e) {
+      LOG.error("Cannot create PersistentHashMap in " + file, e);
+      throw new RuntimeException(e);
+    }
+  }
+
+  private static @NotNull PersistentHashMap<String, Long> createMap(@NotNull Path file) throws IOException {
+    return new PersistentHashMap<>(file,
+                                   EnumeratorStringDescriptor.INSTANCE,
+                                   EnumeratorLongDescriptor.INSTANCE,
+                                   256,
+                                   0,
+                                   new StorageLockContext(true));
+  }
+
+  private void registerViewed(@NotNull VirtualFile file) {
+    if (ApplicationManager.getApplication().isUnitTestMode() || !UISettings.getInstance().getShowInplaceComments()) {
+      return;
     }
 
-    private void trimToSize(){
-      final int limit = UISettings.getInstance().getRecentFilesLimit() + 1;
-      while(CHANGED_PATHS.size()>limit){
-        CHANGED_PATHS.remove(0);
+    try {
+      recentFileTimestampMap.getValue().put(file.getPath(), System.currentTimeMillis());
+    }
+    catch (IOException e) {
+      LOG.info("Cannot put a timestamp from a persistent hash map", e);
+    }
+  }
+
+  public static void appendTimestamp(@NotNull Project project,
+                                     @NotNull SimpleColoredComponent component,
+                                     @NotNull VirtualFile file) {
+    if (!UISettings.getInstance().getShowInplaceComments()) {
+      return;
+    }
+
+    try {
+      Long timestamp = ((IdeDocumentHistoryImpl)getInstance(project)).recentFileTimestampMap.getValue().get(file.getPath());
+      if (timestamp != null) {
+        component.append(" ").append(DateFormatUtil.formatPrettyDateTime(timestamp), SimpleTextAttributes.GRAYED_SMALL_ATTRIBUTES);
       }
+    }
+    catch (IOException e) {
+      LOG.info("Cannot get a timestamp from a persistent hash map", e);
+    }
+  }
+
+  static final class RecentlyChangedFilesState {
+    @XCollection(style = XCollection.Style.v2)
+    public final List<String> changedPaths = new ArrayList<>();
+
+    @Override
+    public boolean equals(Object o) {
+      if (this == o) {
+        return true;
+      }
+      if (o == null || getClass() != o.getClass()) {
+        return false;
+      }
+      return changedPaths.equals(((RecentlyChangedFilesState)o).changedPaths);
+    }
+
+    @Override
+    public int hashCode() {
+      return changedPaths.hashCode();
     }
   }
 
   @Override
   public RecentlyChangedFilesState getState() {
-    return myRecentlyChangedFiles;
+    synchronized (state) {
+      RecentlyChangedFilesState stateSnapshot = new RecentlyChangedFilesState();
+      stateSnapshot.changedPaths.addAll(state.changedPaths);
+      return stateSnapshot;
+    }
   }
 
   @Override
   public void loadState(@NotNull RecentlyChangedFilesState state) {
-    myRecentlyChangedFiles = state;
-  }
-
-  final void onFileDeleted() {
-    removeInvalidFilesFromStacks();
+    synchronized (this.state) {
+      this.state.changedPaths.clear();
+      this.state.changedPaths.addAll(state.changedPaths);
+    }
   }
 
   public final void onSelectionChanged() {
     myCurrentCommandIsNavigation = true;
     myCurrentCommandHasMoves = true;
-  }
-
-  private void onCaretPositionChanged(CaretEvent e) {
-    if (e.getOldPosition().line == e.getNewPosition().line) return;
-    Document document = e.getEditor().getDocument();
-    if (getFileDocumentManager().getFile(document) != null) {
-      myCurrentCommandHasMoves = true;
-    }
-  }
-
-  private void onDocumentChanged(DocumentEvent e) {
-    Document document = e.getDocument();
-    final VirtualFile file = getFileDocumentManager().getFile(document);
-    if (file != null && !(file instanceof LightVirtualFile) && !ApplicationManager.getApplication().hasWriteAction(ExternalChangeAction.class)) {
-      if (!ApplicationManager.getApplication().isDispatchThread()) LOG.error("Document update for physical file not in EDT: " + file);
-      myCurrentCommandHasChanges = true;
-      myChangedFilesInCurrentCommand.add(file);
-    }
   }
 
   final void onCommandStarted() {
@@ -194,35 +279,52 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     myChangedFilesInCurrentCommand.clear();
   }
 
-  private PlaceInfo getCurrentPlaceInfo() {
-    final Pair<FileEditor,FileEditorProvider> selectedEditorWithProvider = getSelectedEditor();
-    if (selectedEditorWithProvider != null) {
-      return createPlaceInfo(selectedEditorWithProvider.getFirst (), selectedEditorWithProvider.getSecond ());
+  private @Nullable PlaceInfo getCurrentPlaceInfo() {
+    FileEditorWithProvider selectedEditorWithProvider = getSelectedEditor();
+    if (selectedEditorWithProvider == null) {
+      return null;
+    }
+    return createPlaceInfo(selectedEditorWithProvider.getFileEditor(), selectedEditorWithProvider.getProvider());
+  }
+
+  private static @Nullable PlaceInfo getPlaceInfoFromFocus() {
+    FileEditor fileEditor = new FocusBasedCurrentEditorProvider().getCurrentEditor();
+    if (fileEditor instanceof TextEditor && fileEditor.isValid()) {
+      VirtualFile file = fileEditor.getFile();
+      if (file != null) {
+        return new PlaceInfo(file,
+                             fileEditor.getState(FileEditorStateLevel.NAVIGATION),
+                             TextEditorProvider.getInstance().getEditorTypeId(),
+                             null,
+                             getCaretPosition(fileEditor), System.currentTimeMillis());
+      }
     }
     return null;
   }
 
-  final void onCommandFinished(Object commandGroupId) {
-    if (myCommandStartPlace != null) {
-      if (myCurrentCommandIsNavigation && myCurrentCommandHasMoves) {
-        if (!myBackInProgress) {
-          if (!CommandMerger.canMergeGroup(commandGroupId, myLastGroupId)) {
-            putLastOrMerge(myBackPlaces, myCommandStartPlace, BACK_QUEUE_LIMIT);
-          }
-          if (!myForwardInProgress) {
-            myForwardPlaces.clear();
-          }
-        }
-        removeInvalidFilesFromStacks();
-      }
-    }
+  final void onCommandFinished(Project project, Object commandGroupId) {
+    if (!CommandMerger.canMergeGroup(commandGroupId, myLastGroupId)) myRegisteredBackPlaceInLastGroup = false;
     myLastGroupId = commandGroupId;
 
+    if (myCommandStartPlace != null && myCurrentCommandIsNavigation && myCurrentCommandHasMoves) {
+      if (!myBackInProgress) {
+        if (!myRegisteredBackPlaceInLastGroup) {
+          myRegisteredBackPlaceInLastGroup = true;
+          putLastOrMerge(myCommandStartPlace, BACK_QUEUE_LIMIT, false);
+          registerViewed(myCommandStartPlace.myFile);
+        }
+        if (!myForwardInProgress) {
+          myForwardPlaces.clear();
+        }
+      }
+      removeInvalidFilesFromStacks();
+    }
+
     if (myCurrentCommandHasChanges) {
-      setCurrentChangePlace();
+      setCurrentChangePlace(project == myProject);
     }
     else if (myCurrentCommandHasMoves) {
-      pushCurrentChangePlace();
+      myCurrentIndex = myChangePlaces.size();
     }
   }
 
@@ -232,62 +334,67 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   }
 
   @Override
-  public final void includeCurrentPlaceAsChangePlace() {
-    setCurrentChangePlace();
-    pushCurrentChangePlace();
+  public void setCurrentCommandHasMoves() {
+    myCurrentCommandHasMoves = true;
   }
 
-  private void setCurrentChangePlace() {
-    final PlaceInfo placeInfo = getCurrentPlaceInfo();
+  @Override
+  public final void includeCurrentPlaceAsChangePlace() {
+    setCurrentChangePlace(false);
+  }
+
+  private void setCurrentChangePlace(boolean acceptPlaceFromFocus) {
+    PlaceInfo placeInfo = getCurrentPlaceInfo();
+    if (placeInfo != null && !myChangedFilesInCurrentCommand.contains(placeInfo.getFile())) {
+      placeInfo = null;
+    }
+    if (placeInfo == null && acceptPlaceFromFocus) {
+      placeInfo = getPlaceInfoFromFocus();
+    }
+    if (placeInfo != null && !myChangedFilesInCurrentCommand.contains(placeInfo.getFile())) {
+      placeInfo = null;
+    }
     if (placeInfo == null) {
       return;
     }
 
-    final VirtualFile file = placeInfo.getFile();
-    if (myChangedFilesInCurrentCommand.contains(file)) {
-      myRecentlyChangedFiles.register(file);
-
-      myCurrentChangePlace = placeInfo;
-      if (!myChangePlaces.isEmpty()) {
-        final PlaceInfo lastInfo = myChangePlaces.getLast();
-        if (isSame(placeInfo, lastInfo)) {
-          myChangePlaces.removeLast();
-        }
+    int limit = UISettings.getInstance().getRecentFilesLimit() + 1;
+    synchronized (state) {
+      String path = placeInfo.getFile().getPath();
+      List<String> changedPaths = state.changedPaths;
+      changedPaths.remove(path);
+      changedPaths.add(path);
+      while (changedPaths.size() > limit) {
+        changedPaths.remove(0);
       }
-      myCurrentIndex = myStartIndex + myChangePlaces.size();
     }
-  }
 
-  private void pushCurrentChangePlace() {
-    if (myCurrentChangePlace != null) {
-      myChangePlaces.add(myCurrentChangePlace);
-      if (myChangePlaces.size() > CHANGE_QUEUE_LIMIT) {
-        myChangePlaces.removeFirst();
-        myStartIndex++;
-      }
-      myCurrentChangePlace = null;
-    }
-    myCurrentIndex = myStartIndex + myChangePlaces.size();
+    putLastOrMerge(placeInfo, CHANGE_QUEUE_LIMIT, true);
+    myCurrentIndex = myChangePlaces.size();
   }
 
   @Override
-  public VirtualFile[] getChangedFiles() {
+  public @NotNull List<VirtualFile> getChangedFiles() {
     List<VirtualFile> files = new ArrayList<>();
+    List<String> paths;
+    synchronized (state) {
+      paths = state.changedPaths.isEmpty() ? Collections.emptyList() : new ArrayList<>(state.changedPaths);
+    }
 
-    final LocalFileSystem lfs = LocalFileSystem.getInstance();
-    final List<String> paths = myRecentlyChangedFiles.CHANGED_PATHS;
+    LocalFileSystem lfs = LocalFileSystem.getInstance();
     for (String path : paths) {
-      final VirtualFile file = lfs.findFileByPath(path);
+      VirtualFile file = lfs.findFileByPath(path);
       if (file != null) {
         files.add(file);
       }
     }
-
-    return VfsUtilCore.toVirtualFileArray(files);
+    return files;
   }
 
-  public boolean isRecentlyChanged(@NotNull VirtualFile file) {
-    return myRecentlyChangedFiles.CHANGED_PATHS.contains(file.getPath());
+  boolean isRecentlyChanged(@NotNull VirtualFile file) {
+    synchronized (state) {
+      return state.changedPaths.contains(file.getPath());
+    }
   }
 
   @Override
@@ -298,9 +405,7 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
 
     myLastGroupId = null;
 
-    myStartIndex = 0;
     myCurrentIndex = 0;
-    myCurrentChangePlace = null;
     myCommandStartPlace = null;
   }
 
@@ -309,6 +414,7 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     removeInvalidFilesFromStacks();
     if (myBackPlaces.isEmpty()) return;
     final PlaceInfo info = myBackPlaces.removeLast();
+    myProject.getMessageBus().syncPublisher(RecentPlacesListener.TOPIC).recentPlaceRemoved(info, false);
 
     PlaceInfo current = getCurrentPlaceInfo();
     if (current != null) myForwardPlaces.add(current);
@@ -332,7 +438,8 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     myForwardInProgress = true;
     try {
       executeCommand(() -> gotoPlaceInfo(target), "", null);
-    } finally {
+    }
+    finally {
       myForwardInProgress = false;
     }
   }
@@ -367,47 +474,82 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   @Override
   public final void navigatePreviousChange() {
     removeInvalidFilesFromStacks();
-    if (myCurrentIndex == myStartIndex) return;
-    int index = myCurrentIndex - 1;
-    final PlaceInfo info = myChangePlaces.get(index - myStartIndex);
+    if (myCurrentIndex == 0) return;
+    PlaceInfo currentPlace = getCurrentPlaceInfo();
+    for (int i = myCurrentIndex - 1; i >= 0; i--) {
+      PlaceInfo info = myChangePlaces.get(i);
+      if (currentPlace == null || !isSame(currentPlace, info)) {
+        executeCommand(() -> gotoPlaceInfo(info), "", null);
+        myCurrentIndex = i;
+        break;
+      }
+    }
+  }
 
-    executeCommand(() -> gotoPlaceInfo(info), "", null);
-    myCurrentIndex = index;
+  @Override
+  public @NotNull List<PlaceInfo> getBackPlaces() {
+    return Collections.unmodifiableList(myBackPlaces);
+  }
+
+  @Override
+  public List<PlaceInfo> getChangePlaces() {
+    return Collections.unmodifiableList(myChangePlaces);
+  }
+
+  @Override
+  public void removeBackPlace(@NotNull PlaceInfo placeInfo) {
+    removePlaceInfo(placeInfo, myBackPlaces, false);
+  }
+
+  @Override
+  public void removeChangePlace(@NotNull PlaceInfo placeInfo) {
+    removePlaceInfo(placeInfo, myChangePlaces, true);
+  }
+
+  private void removePlaceInfo(@NotNull PlaceInfo placeInfo, @NotNull Collection<PlaceInfo> places, boolean changed) {
+    boolean removed = places.remove(placeInfo);
+    if (removed) {
+      myProject.getMessageBus().syncPublisher(RecentPlacesListener.TOPIC).recentPlaceRemoved(placeInfo, changed);
+    }
   }
 
   @Override
   public final boolean isNavigatePreviousChangeAvailable() {
-    return myCurrentIndex > myStartIndex;
+    return myCurrentIndex > 0;
   }
 
-  private void removeInvalidFilesFromStacks() {
+  void removeInvalidFilesFromStacks() {
     removeInvalidFilesFrom(myBackPlaces);
 
     removeInvalidFilesFrom(myForwardPlaces);
     if (removeInvalidFilesFrom(myChangePlaces)) {
-      myCurrentIndex = myStartIndex + myChangePlaces.size();
+      myCurrentIndex = myChangePlaces.size();
     }
   }
 
   @Override
   public void navigateNextChange() {
     removeInvalidFilesFromStacks();
-    if (myCurrentIndex >= myStartIndex + myChangePlaces.size() - 1) return;
-    int index = myCurrentIndex + 1;
-    final PlaceInfo info = myChangePlaces.get(index - myStartIndex);
-
-    executeCommand(() -> gotoPlaceInfo(info), "", null);
-    myCurrentIndex = index;
+    if (myCurrentIndex >= myChangePlaces.size()) return;
+    PlaceInfo currentPlace = getCurrentPlaceInfo();
+    for (int i = myCurrentIndex; i < myChangePlaces.size(); i++) {
+      PlaceInfo info = myChangePlaces.get(i);
+      if (currentPlace == null || !isSame(currentPlace, info)) {
+        executeCommand(() -> gotoPlaceInfo(info), "", null);
+        myCurrentIndex = i + 1;
+        break;
+      }
+    }
   }
 
   @Override
   public boolean isNavigateNextChangeAvailable() {
-    return myCurrentIndex < myStartIndex + myChangePlaces.size() - 1;
+    return myCurrentIndex < myChangePlaces.size();
   }
 
   private static boolean removeInvalidFilesFrom(@NotNull List<PlaceInfo> backPlaces) {
     boolean removed = false;
-    for (Iterator<PlaceInfo> iterator = backPlaces.iterator(); iterator.hasNext();) {
+    for (Iterator<PlaceInfo> iterator = backPlaces.iterator(); iterator.hasNext(); ) {
       PlaceInfo info = iterator.next();
       final VirtualFile file = info.myFile;
       if (!file.isValid()) {
@@ -419,19 +561,25 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return removed;
   }
 
-  private void gotoPlaceInfo(@NotNull PlaceInfo info) { // TODO: Msk
-    final boolean wasActive = myToolWindowManager.isEditorComponentActive();
-    EditorWindow wnd = info.getWindow();
-    final Pair<FileEditor[],FileEditorProvider[]> editorsWithProviders = wnd != null && wnd.isValid()
-                           ? myEditorManager.openFileWithProviders(info.getFile(), wasActive, wnd)
-                           : myEditorManager.openFileWithProviders(info.getFile(), wasActive, false);
+  @Override
+  public void gotoPlaceInfo(@NotNull PlaceInfo info) {
+    gotoPlaceInfo(info, ToolWindowManager.getInstance(myProject).isEditorComponentActive());
+  }
 
-    myEditorManager.setSelectedEditor(info.getFile(), info.getEditorTypeId());
+  @Override
+  public void gotoPlaceInfo(@NotNull PlaceInfo info, boolean wasActive) {
+    EditorWindow wnd = info.getWindow();
+    FileEditorManagerEx editorManager = getFileEditorManager();
+    final Pair<FileEditor[], FileEditorProvider[]> editorsWithProviders = wnd != null && wnd.isValid()
+                                                                          ? editorManager.openFileWithProviders(info.getFile(), wasActive, wnd)
+                                                                          : editorManager.openFileWithProviders(info.getFile(), wasActive, false);
+
+    editorManager.setSelectedEditor(info.getFile(), info.getEditorTypeId());
 
     final FileEditor[] editors = editorsWithProviders.getFirst();
     final FileEditorProvider[] providers = editorsWithProviders.getSecond();
     for (int i = 0; i < editors.length; i++) {
-      String typeId = providers [i].getEditorTypeId();
+      String typeId = providers[i].getEditorTypeId();
       if (typeId.equals(info.getEditorTypeId())) {
         editors[i].setState(info.getNavigationState());
       }
@@ -441,40 +589,56 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   /**
    * @return currently selected FileEditor or null.
    */
-  protected Pair<FileEditor,FileEditorProvider> getSelectedEditor() {
-    VirtualFile file = myEditorManager.getCurrentFile();
-    return file != null ? myEditorManager.getSelectedEditorWithProvider(file) : null;
+  protected @Nullable FileEditorWithProvider getSelectedEditor() {
+    FileEditorManagerEx editorManager = getFileEditorManager();
+    VirtualFile file = editorManager != null ? editorManager.getCurrentFile() : null;
+    return file == null ? null : editorManager.getSelectedEditorWithProvider(file);
   }
 
-  private PlaceInfo createPlaceInfo(@NotNull final FileEditor fileEditor, final FileEditorProvider fileProvider) {
-    if (!fileEditor.isValid()) return null;
+  // used by Rider
+  @SuppressWarnings("WeakerAccess")
+  protected PlaceInfo createPlaceInfo(@NotNull FileEditor fileEditor, FileEditorProvider fileProvider) {
+    if (!fileEditor.isValid()) {
+      return null;
+    }
 
-    final VirtualFile file = myEditorManager.getFile(fileEditor);
+    FileEditorManagerEx editorManager = getFileEditorManager();
+    final VirtualFile file = editorManager.getFile(fileEditor);
     LOG.assertTrue(file != null);
+    FileEditorState state = fileEditor.getState(FileEditorStateLevel.NAVIGATION);
 
-    final FileEditorState state = fileEditor.getState(FileEditorStateLevel.NAVIGATION);
-
-    return new PlaceInfo(file, state, fileProvider.getEditorTypeId(), myEditorManager.getCurrentWindow());
+    return new PlaceInfo(file, state, fileProvider.getEditorTypeId(), editorManager.getCurrentWindow(), getCaretPosition(fileEditor),
+                         System.currentTimeMillis());
   }
 
+  private static @Nullable RangeMarker getCaretPosition(@NotNull FileEditor fileEditor) {
+    if (!(fileEditor instanceof TextEditor)) {
+      return null;
+    }
 
-  @Override
-  @NotNull
-  public final String getComponentName() {
-    return "IdeDocumentHistory";
+    Editor editor = ((TextEditor)fileEditor).getEditor();
+    int offset = editor.getCaretModel().getOffset();
+
+    return editor.getDocument().createRangeMarker(offset, offset);
   }
 
-  private static void putLastOrMerge(@NotNull LinkedList<PlaceInfo> list, @NotNull PlaceInfo next, int limitSizeLimit) {
+  private void putLastOrMerge(@NotNull PlaceInfo next, int limit, boolean isChanged) {
+    LinkedList<PlaceInfo> list = isChanged ? myChangePlaces : myBackPlaces;
+    MessageBus messageBus = myProject.getMessageBus();
+    RecentPlacesListener listener = messageBus.syncPublisher(RecentPlacesListener.TOPIC);
     if (!list.isEmpty()) {
       PlaceInfo prev = list.getLast();
       if (isSame(prev, next)) {
-        list.removeLast();
+        PlaceInfo removed = list.removeLast();
+        listener.recentPlaceRemoved(removed, isChanged);
       }
     }
 
     list.add(next);
-    if (list.size() > limitSizeLimit) {
-      list.removeFirst();
+    listener.recentPlaceAdded(next, isChanged);
+    if (list.size() > limit) {
+      PlaceInfo first = list.removeFirst();
+      listener.recentPlaceRemoved(first, isChanged);
     }
   }
 
@@ -485,38 +649,54 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return myFileDocumentManager;
   }
 
-  private static final class PlaceInfo {
+  public static final class PlaceInfo {
     private final VirtualFile myFile;
     private final FileEditorState myNavigationState;
     private final String myEditorTypeId;
     private final Reference<EditorWindow> myWindow;
+    private final @Nullable RangeMarker myCaretPosition;
+    private final long myTimeStamp;
 
-    PlaceInfo(@NotNull VirtualFile file,
-              @NotNull FileEditorState navigationState,
-              @NotNull String editorTypeId,
-              @Nullable EditorWindow window) {
+    public PlaceInfo(@NotNull VirtualFile file,
+                     @NotNull FileEditorState navigationState,
+                     @NotNull String editorTypeId,
+                     @Nullable EditorWindow window,
+                     @Nullable RangeMarker caretPosition) {
       myNavigationState = navigationState;
       myFile = file;
       myEditorTypeId = editorTypeId;
       myWindow = new WeakReference<>(window);
+      myCaretPosition = caretPosition;
+      myTimeStamp = -1;
+    }
+
+    public PlaceInfo(@NotNull VirtualFile file,
+                     @NotNull FileEditorState navigationState,
+                     @NotNull String editorTypeId,
+                     @Nullable EditorWindow window,
+                     @Nullable RangeMarker caretPosition,
+                     long stamp) {
+      myNavigationState = navigationState;
+      myFile = file;
+      myEditorTypeId = editorTypeId;
+      myWindow = new WeakReference<>(window);
+      myCaretPosition = caretPosition;
+      myTimeStamp = stamp;
     }
 
     public EditorWindow getWindow() {
       return myWindow.get();
     }
 
-    @NotNull
-    private FileEditorState getNavigationState() {
+    public @NotNull FileEditorState getNavigationState() {
       return myNavigationState;
     }
 
-    @NotNull
-    public VirtualFile getFile() {
+    public @NotNull VirtualFile getFile() {
       return myFile;
     }
 
-    @NotNull
-    public String getEditorTypeId() {
+    public @NotNull String getEditorTypeId() {
       return myEditorTypeId;
     }
 
@@ -524,24 +704,35 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     public String toString() {
       return getFile().getName() + " " + getNavigationState();
     }
-  }
 
-  @NotNull
-  @TestOnly
-  List<PlaceInfo> getBackPlaces() {
-    return myBackPlaces;
+    public @Nullable RangeMarker getCaretPosition() {
+      return myCaretPosition;
+    }
+
+    public long getTimeStamp() {
+      return myTimeStamp;
+    }
   }
 
   @Override
   public final void dispose() {
     myLastGroupId = null;
+    PersistentHashMap<String, Long> map = recentFileTimestampMap.getValueIfInitialized();
+    if (map != null) {
+      try {
+        map.close();
+      }
+      catch (IOException e) {
+        LOG.info("Cannot close persistent viewed files timestamps hash map", e);
+      }
+    }
   }
 
-  protected void executeCommand(Runnable runnable, String name, Object groupId) {
-    myCmdProcessor.executeCommand(myProject, runnable, name, groupId);
+  protected void executeCommand(Runnable runnable, @NlsContexts.Command String name, Object groupId) {
+    CommandProcessor.getInstance().executeCommand(myProject, runnable, name, groupId);
   }
 
-  private static boolean isSame(@NotNull PlaceInfo first, @NotNull PlaceInfo second) {
+  public static boolean isSame(@NotNull PlaceInfo first, @NotNull PlaceInfo second) {
     if (first.getFile().equals(second.getFile())) {
       FileEditorState firstState = first.getNavigationState();
       FileEditorState secondState = second.getNavigationState();
@@ -549,5 +740,31 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     }
 
     return false;
+  }
+
+  /**
+   * {@link RecentPlacesListener} listens recently viewed or changed place adding and removing events.
+   */
+  public interface RecentPlacesListener {
+    @Topic.ProjectLevel
+    Topic<RecentPlacesListener> TOPIC = new Topic<>(RecentPlacesListener.class, Topic.BroadcastDirection.NONE);
+
+    /**
+     * Fires on a new place info adding into {@link #myChangePlaces} or {@link #myBackPlaces} infos list
+     *
+     * @param changePlace new place info
+     * @param isChanged   true if place info was added into the changed infos list {@link #myChangePlaces};
+     *                    false if place info was added into the back infos list {@link #myBackPlaces}
+     */
+    void recentPlaceAdded(@NotNull PlaceInfo changePlace, boolean isChanged);
+
+    /**
+     * Fires on a place info removing from the {@link #myChangePlaces} or the {@link #myBackPlaces} infos list
+     *
+     * @param changePlace place info that was removed
+     * @param isChanged   true if place info was removed from the changed infos list {@link #myChangePlaces};
+     *                    false if place info was removed from the back infos list {@link #myBackPlaces}
+     */
+    void recentPlaceRemoved(@NotNull PlaceInfo changePlace, boolean isChanged);
   }
 }
