@@ -1,32 +1,13 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.wm.impl;
 
 import com.intellij.ide.IdeEventQueue;
-import com.intellij.ide.UiActivity;
-import com.intellij.ide.UiActivityMonitor;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.DataContext;
 import com.intellij.openapi.actionSystem.PlatformDataKeys;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationActivationListener;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
-import com.intellij.openapi.application.ex.ApplicationManagerEx;
-import com.intellij.openapi.components.impl.ServiceManagerImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.JBPopup;
@@ -35,12 +16,13 @@ import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.wm.FocusRequestor;
 import com.intellij.openapi.wm.IdeFocusManager;
 import com.intellij.openapi.wm.IdeFrame;
-import com.intellij.openapi.wm.WindowManager;
 import com.intellij.openapi.wm.ex.IdeFocusTraversalPolicy;
-import com.intellij.openapi.wm.ex.LayoutFocusTraversalPolicyExt;
+import com.intellij.ui.ComponentUtil;
+import com.intellij.ui.DirtyUI;
 import com.intellij.ui.popup.AbstractPopup;
 import com.intellij.util.concurrency.EdtExecutorService;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.ui.EDT;
 import com.intellij.util.ui.UIUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -49,24 +31,16 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.FocusEvent;
 import java.awt.event.WindowEvent;
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
 import java.text.SimpleDateFormat;
-import java.util.*;
 import java.util.List;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
-public class FocusManagerImpl extends IdeFocusManager implements Disposable {
+public final class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private static final Logger LOG = Logger.getInstance(FocusManagerImpl.class);
-  private static final UiActivity FOCUS = new UiActivity.Focus("awtFocusRequest");
-  private static final UiActivity TYPEAHEAD = new UiActivity.Focus("typeahead");
 
-  private final Application myApp;
-
-  private final boolean isInternalMode = ApplicationManagerEx.getApplicationEx().isInternal();
-  private final LinkedList<FocusRequestInfo> myRequests = new LinkedList<>();
+  private final List<FocusRequestInfo> myRequests = new LinkedList<>();
 
   private final IdeEventQueue myQueue;
 
@@ -76,27 +50,22 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private final Set<FurtherRequestor> myValidFurtherRequestors = new HashSet<>();
 
   private final Set<ActionCallback> myTypeAheadRequestors = new HashSet<>();
-  private final UiActivityMonitor myActivityMonitor;
   private boolean myTypeaheadEnabled = true;
 
-  private final Map<IdeFrame, Component> myLastFocused = ContainerUtil.createWeakValueMap();
-  private final Map<IdeFrame, Component> myLastFocusedAtDeactivation = ContainerUtil.createWeakValueMap();
+  private final Map<Window, Component> myLastFocused = ContainerUtil.createWeakValueMap();
+  private final Map<Window, Component> myLastFocusedAtDeactivation = ContainerUtil.createWeakValueMap();
 
   private DataContext myRunContext;
 
   private IdeFrame myLastFocusedFrame;
 
-  @SuppressWarnings("UnusedParameters")  // the dependencies are needed to ensure correct loading order
-  public FocusManagerImpl(ServiceManagerImpl serviceManager, WindowManager wm, UiActivityMonitor monitor) {
-    myApp = ApplicationManager.getApplication();
+  public FocusManagerImpl() {
     myQueue = IdeEventQueue.getInstance();
-    myActivityMonitor = monitor;
 
     myFocusedComponentAlarm = new EdtAlarm();
     myForcedFocusRequestsAlarm = new EdtAlarm();
 
-    final AppListener myAppListener = new AppListener();
-    myApp.getMessageBus().connect().subscribe(ApplicationActivationListener.TOPIC, myAppListener);
+    ApplicationManager.getApplication().getMessageBus().connect().subscribe(ApplicationActivationListener.TOPIC, new AppListener());
 
     IdeEventQueue.getInstance().addDispatcher(e -> {
       if (e instanceof FocusEvent) {
@@ -104,18 +73,18 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
         final Component c = fe.getComponent();
         if (c instanceof Window || c == null) return false;
 
-        Component parent = UIUtil.findUltimateParent(c);
-
+        Component parent = ComponentUtil.findUltimateParent(c);
         if (parent instanceof IdeFrame) {
-          myLastFocused.put((IdeFrame)parent, c);
+          LOG.assertTrue(parent instanceof Window);
+          myLastFocused.put((Window)parent, c);
         }
       }
       else if (e instanceof WindowEvent) {
-        Window wnd = ((WindowEvent)e).getWindow();
+        Window window = ((WindowEvent)e).getWindow();
         if (e.getID() == WindowEvent.WINDOW_CLOSED) {
-          if (wnd instanceof IdeFrame) {
-            myLastFocused.remove(wnd);
-            myLastFocusedAtDeactivation.remove(wnd);
+          if (window instanceof IdeFrame) {
+            myLastFocused.remove(window);
+            myLastFocusedAtDeactivation.remove(window);
           }
         }
       }
@@ -123,11 +92,17 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
       return false;
     }, this);
 
-    KeyboardFocusManager.getCurrentKeyboardFocusManager().addPropertyChangeListener("focusedWindow", new PropertyChangeListener() {
-      @Override
-      public void propertyChange(PropertyChangeEvent evt) {
-        if (evt.getNewValue() instanceof IdeFrame) {
-          myLastFocusedFrame = (IdeFrame)evt.getNewValue();
+    KeyboardFocusManager.getCurrentKeyboardFocusManager().addPropertyChangeListener("focusedWindow", event -> {
+      Object value = event.getNewValue();
+      if (value instanceof IdeFrame) {
+        LOG.assertTrue(value instanceof Window);
+        myLastFocusedFrame = (IdeFrame)value;
+      }
+      else {
+        Window window = getLastFocusedIdeWindow();
+        if (window != null && !window.isVisible()) {
+          // it is need to forget about the closed window
+          myLastFocusedFrame = null;
         }
       }
     });
@@ -138,10 +113,21 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     return myLastFocusedFrame;
   }
 
+  @Nullable
+  @Override
+  public Window getLastFocusedIdeWindow() {
+    return (Window)myLastFocusedFrame;
+  }
+
+  @DirtyUI
+  @Override
   public ActionCallback requestFocusInProject(@NotNull Component c, @Nullable Project project) {
-    if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
+    if (ApplicationManager.getApplication().isActive() || !Registry.is("suppress.focus.stealing.active.window.checks")) {
+      logFocusRequest(c, project, false);
       c.requestFocus();
-    } else {
+    }
+    else {
+      logFocusRequest(c, project, true);
       c.requestFocusInWindow();
     }
     return ActionCallback.DONE;
@@ -150,6 +136,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   @Override
   @NotNull
   public ActionCallback requestFocus(@NotNull final Component c, final boolean forced) {
+    logFocusRequest(c, null, false);
     c.requestFocus();
     return ActionCallback.DONE;
   }
@@ -162,14 +149,15 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   public void recordFocusRequest(Component c, boolean forced) {
     myRequests.add(new FocusRequestInfo(c, new Throwable(), forced));
     if (myRequests.size() > 200) {
-      myRequests.removeFirst();
+      myRequests.remove(0);
     }
   }
 
   public static IdeFocusManager getInstance() {
-    return ApplicationManager.getApplication().getComponent(IdeFocusManager.class);
+    return ApplicationManager.getApplication().getService(IdeFocusManager.class);
   }
 
+  @DirtyUI
   @Override
   public void dispose() {
     myForcedFocusRequestsAlarm.cancelAllRequests();
@@ -252,36 +240,28 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
                                                 IdeEventQueue.getInstance().runnablesWaitingForFocusChangeState();
                                        }
                                      },
-                                     true).doWhenProcessed(() -> {
-      myTypeAheadRequestors.remove(done);
-    }));
+                                     true).doWhenProcessed(() -> myTypeAheadRequestors.remove(done)));
   }
 
-  private void revalidateFurtherRequestors() {
-    Iterator<FurtherRequestor> requestorIterator = myValidFurtherRequestors.iterator();
-    while (requestorIterator.hasNext()) {
-      FurtherRequestor each = requestorIterator.next();
-      if (each.isExpired()) {
-        requestorIterator.remove();
-        Disposer.dispose(each);
-      }
-    }
-  }
-
+  @DirtyUI
   @Override
   public Component getFocusOwner() {
     assertDispatchThread();
 
     Component result = null;
     if (!ApplicationManager.getApplication().isActive()) {
-      result = myLastFocusedAtDeactivation.get(getLastFocusedFrame());
+      IdeFrame frame = getLastFocusedFrame();
+      if (frame != null) {
+        LOG.assertTrue(frame instanceof Window);
+      }
+      result = myLastFocusedAtDeactivation.get(frame);
     }
     else if (myRunContext != null) {
       result = (Component)myRunContext.getData(PlatformDataKeys.CONTEXT_COMPONENT.getName());
     }
 
     if (result == null) {
-      result =  KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+      result = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
     }
 
     if (result == null) {
@@ -289,7 +269,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
       if (permOwner != null) {
         result = permOwner;
       }
-      
+
       if (UIUtil.isMeaninglessFocusOwner(result)) {
         result = KeyboardFocusManager.getCurrentKeyboardFocusManager().getActiveWindow();
       }
@@ -298,6 +278,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     return result;
   }
 
+  @DirtyUI
   @Override
   public void runOnOwnContext(@NotNull DataContext context, @NotNull Runnable runnable) {
     assertDispatchThread();
@@ -312,13 +293,17 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   }
 
   @Override
-  public Component getLastFocusedFor(IdeFrame frame) {
+  public Component getLastFocusedFor(@Nullable Window frame) {
     assertDispatchThread();
+
+    if (frame == null) {
+      return null;
+    }
 
     return myLastFocused.get(frame);
   }
 
-  public void setLastFocusedAtDeactivation(@NotNull IdeFrame frame, @NotNull Component c) {
+  public void setLastFocusedAtDeactivation(@NotNull Window frame, @NotNull Component c) {
     myLastFocusedAtDeactivation.put(frame, c);
   }
 
@@ -328,13 +313,14 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
 
     if (c == null) return;
 
-    final Window window = UIUtil.getParentOfType(Window.class, c);
+    final Window window = ComponentUtil.getParentOfType((Class<? extends Window>)Window.class, (Component)c);
     if (window != null && window.isShowing()) {
       doWhenFocusSettlesDown(() -> {
         if (ApplicationManager.getApplication().isActive()) {
           if (window instanceof JFrame && ((JFrame)window).getState() == Frame.ICONIFIED) {
             ((JFrame)window).setState(Frame.NORMAL);
-          } else {
+          }
+          else {
             window.toFront();
           }
         }
@@ -342,9 +328,10 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     }
   }
 
-  private static class FurtherRequestor implements FocusRequestor {
+  private static final class FurtherRequestor implements FocusRequestor {
     private final IdeFocusManager myManager;
     private final Expirable myExpirable;
+    @SuppressWarnings({"FieldCanBeLocal", "unused"})
     private Throwable myAllocation;
     private boolean myDisposed;
 
@@ -375,10 +362,9 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     }
   }
 
-
-  static class EdtAlarm {
+  final static class EdtAlarm {
     private final Set<EdtRunnable> myRequests = new HashSet<>();
-    
+
     public void cancelAllRequests() {
       for (EdtRunnable each : myRequests) {
         each.expire();
@@ -392,47 +378,15 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     }
   }
 
-  private class AppListener implements ApplicationActivationListener {
-
+  private final class AppListener implements ApplicationActivationListener {
     @Override
-    public void delayedApplicationDeactivated(IdeFrame ideFrame) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
-        Component parent = UIUtil.findUltimateParent(owner);
-
-        if (parent == ideFrame) {
-          myLastFocusedAtDeactivation.put(ideFrame, owner);
-        }
-    }
-
-    private void focusLastFocusedComponent(IdeFrame ideFrame) {
-      final KeyboardFocusManager mgr = KeyboardFocusManager.getCurrentKeyboardFocusManager();
-      if (mgr.getFocusOwner() == null) {
-        Component c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        if (c == null || !c.isShowing()) {
-          c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        }
-
-        final boolean mouseEventAhead = IdeEventQueue.isMouseEventAhead(null);
-        if (c != null && c.isShowing() && !mouseEventAhead) {
-          final LayoutFocusTraversalPolicyExt policy = LayoutFocusTraversalPolicyExt.findWindowPolicy(c);
-          if (policy != null) {
-            policy.setNoDefaultComponent(true, FocusManagerImpl.this);
-          }
-          requestFocus(c, false).doWhenProcessed(() -> {
-            if (policy != null) {
-              policy.setNoDefaultComponent(false, FocusManagerImpl.this);
-            }
-          });
-        }
+    public void delayedApplicationDeactivated(@NotNull Window ideFrame) {
+      Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+      Component parent = UIUtil.findUltimateParent(owner);
+      if (parent == ideFrame) {
+        myLastFocusedAtDeactivation.put(ideFrame, owner);
       }
-
-      myLastFocusedAtDeactivation.remove(ideFrame);
     }
-  }
-
-  @Nullable
-  private static Component getComponent(@NotNull Map<IdeFrame, Component> map, IdeFrame frame) {
-    return map.get(frame);
   }
 
   @Override
@@ -440,27 +394,14 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     return IdeFocusTraversalPolicy.getPreferredFocusedComponent(comp);
   }
 
-  public List<JBPopup> getChildPopups(@NotNull final Component component) {
-    return AbstractPopup.all.toStrongList().stream().filter(popup -> {
-      Component owner = popup.getOwner();
-      while (owner != null) {
-        if (owner.equals(component)) {
-          return true;
-        }
-        owner = owner.getParent();
-      }
-      return false;
-    }).collect(Collectors.toList());
-  }
-
   @Override
-  public Component getFocusedDescendantFor(Component comp) {
+  public Component getFocusedDescendantFor(@NotNull Component comp) {
     final Component focused = getFocusOwner();
     if (focused == null) return null;
 
     if (focused == comp || SwingUtilities.isDescendingFrom(focused, comp)) return focused;
 
-    List<JBPopup> popups = getChildPopups(comp);
+    List<JBPopup> popups = AbstractPopup.getChildPopups(comp);
     for (JBPopup each : popups) {
       if (each.isFocused()) return focused;
     }
@@ -472,52 +413,52 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   @Override
   public ActionCallback requestDefaultFocus(boolean forced) {
     Component toFocus = null;
-    if (myLastFocusedFrame != null) {
-      toFocus = myLastFocused.get(myLastFocusedFrame);
+    IdeFrame lastFocusedFrame = myLastFocusedFrame;
+    if (lastFocusedFrame != null) {
+      LOG.assertTrue(lastFocusedFrame instanceof Window);
+      toFocus = myLastFocused.get(lastFocusedFrame);
       if (toFocus == null || !toFocus.isShowing()) {
-        toFocus = getFocusTargetFor(myLastFocusedFrame.getComponent());
+        toFocus = getFocusTargetFor(lastFocusedFrame.getComponent());
       }
     }
     else {
-      Window[] windows = Window.getWindows();
-      for (Window each : windows) {
-        if (each.isActive()) {
-          if (each instanceof JFrame) {
-            toFocus = getFocusTargetFor(((JFrame)each).getRootPane());
-            break;
-          } else if (each instanceof JDialog) {
-            toFocus = getFocusTargetFor(((JDialog)each).getRootPane());
-            break;
-          } else if (each instanceof JWindow) {
-            toFocus = getFocusTargetFor(((JWindow)each).getRootPane());
-            break;
-          }          
-        }
+      Optional<Component> toFocusOptional = Arrays.stream(Window.getWindows()).
+        filter(window -> window instanceof RootPaneContainer).
+        filter(window -> ((RootPaneContainer)window).getRootPane() != null).
+        filter(window -> window.isActive()).
+        findFirst().
+        map(w -> getFocusTargetFor(((RootPaneContainer)w).getRootPane()));
+
+      if (toFocusOptional.isPresent()) {
+        toFocus = toFocusOptional.get();
       }
-    } 
-    
-    if (toFocus != null) {
-      if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
-        toFocus.requestFocus();
-      } else {
-        toFocus.requestFocusInWindow();
-      }
-      return ActionCallback.DONE;
     }
-    
-    
+
+    if (toFocus != null) {
+      return requestFocusInProject(toFocus, null);
+    }
+
+
     return ActionCallback.DONE;
   }
 
   @Override
   public boolean isFocusTransferEnabled() {
-    if (Registry.is("focus.fix.lost.cursor")) return true;
-    return myApp.isActive() || !Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
+    if (Registry.is("focus.fix.lost.cursor")) {
+      return true;
+    }
+    return ApplicationManager.getApplication().isActive() || !Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
   }
 
   private static void assertDispatchThread() {
     if (Registry.is("actionSystem.assertFocusAccessFromEdt")) {
-      ApplicationManager.getApplication().assertIsDispatchThread();
+      EDT.assertIsEdt();
+    }
+  }
+
+  private static void logFocusRequest(@NotNull Component c, @Nullable Project project, boolean inWindow) {
+    if (LOG.isDebugEnabled()) {
+      LOG.debug(String.format("inWindow = %s, project = %s, component = %s", inWindow, project, c), new Throwable());
     }
   }
 }
