@@ -1,45 +1,46 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.gradle.importing;
 
-import com.intellij.compiler.CompilerConfiguration;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.externalSystem.model.DataNode;
+import com.intellij.openapi.externalSystem.model.ExternalProjectInfo;
+import com.intellij.openapi.externalSystem.model.ProjectKeys;
+import com.intellij.openapi.externalSystem.model.project.ModuleData;
+import com.intellij.openapi.externalSystem.model.task.TaskData;
+import com.intellij.openapi.externalSystem.service.project.IdeModifiableModelsProvider;
+import com.intellij.openapi.externalSystem.service.project.IdeModifiableModelsProviderImpl;
+import com.intellij.openapi.externalSystem.service.project.ProjectDataManager;
+import com.intellij.openapi.externalSystem.util.ExternalSystemApiUtil;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
+import com.intellij.openapi.module.StdModuleTypes;
 import com.intellij.openapi.projectRoots.ProjectJdkTable;
 import com.intellij.openapi.projectRoots.Sdk;
-import com.intellij.openapi.roots.LanguageLevelModuleExtensionImpl;
 import com.intellij.openapi.roots.ModuleRootManager;
 import com.intellij.openapi.roots.TestModuleProperties;
 import com.intellij.pom.java.LanguageLevel;
+import com.intellij.util.ArrayUtilRt;
+import com.intellij.util.containers.ContainerUtil;
+import gnu.trove.THashMap;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.plugins.gradle.model.ExternalProject;
+import org.jetbrains.plugins.gradle.service.project.GradleProjectResolverUtil;
+import org.jetbrains.plugins.gradle.service.project.data.ExternalProjectDataCache;
 import org.jetbrains.plugins.gradle.tooling.annotation.TargetVersions;
+import org.jetbrains.plugins.gradle.util.GradleConstants;
 import org.junit.Test;
 import org.junit.runners.Parameterized;
 
-import java.util.Arrays;
-import java.util.Collection;
+import java.io.IOException;
+import java.util.*;
 
-import static com.intellij.util.containers.ContainerUtil.list;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author Vladislav.Soroka
- * @since 10/27/2015
  */
-@SuppressWarnings("JUnit4AnnotatedMethodInJUnit3TestCase")
-public class GradleMiscImportingTest extends GradleImportingTestCase {
+@SuppressWarnings("GrUnresolvedAccess") // ignore unresolved code for injected Groovy Gradle DSL
+public class GradleMiscImportingTest extends GradleJavaImportingTestCase {
 
   /**
    * It's sufficient to run the test against one gradle version
@@ -56,13 +57,13 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
       "apply plugin: 'java'"
     );
 
-    assertModules("project", "project_main", "project_test");
+    assertModules("project", "project.main", "project.test");
 
-    final Module testModule = getModule("project_test");
+    final Module testModule = getModule("project.test");
     TestModuleProperties testModuleProperties = TestModuleProperties.getInstance(testModule);
-    assertEquals("project_main", testModuleProperties.getProductionModuleName());
+    assertEquals("project.main", testModuleProperties.getProductionModuleName());
 
-    final Module productionModule = getModule("project_main");
+    final Module productionModule = getModule("project.main");
     assertSame(productionModule, testModuleProperties.getProductionModule());
   }
 
@@ -73,11 +74,11 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
       "apply plugin: 'java'"
     );
 
-    assertModules("my-project", "my-project_main", "my-project_test");
+    assertModules("my-project", "my-project.main", "my-project.test");
 
-    final Module testModule = getModule("my-project_test");
+    final Module testModule = getModule("my-project.test");
     TestModuleProperties testModuleProperties = TestModuleProperties.getInstance(testModule);
-    assertEquals("my-project_main", testModuleProperties.getProductionModuleName());
+    assertEquals("my-project.main", testModuleProperties.getProductionModuleName());
   }
 
   @Test
@@ -86,10 +87,10 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
       "apply plugin: 'java'"
     );
 
-    assertModules("project", "project_main", "project_test");
+    assertModules("project", "project.main", "project.test");
     assertTrue(ModuleRootManager.getInstance(getModule("project")).isSdkInherited());
-    assertTrue(ModuleRootManager.getInstance(getModule("project_main")).isSdkInherited());
-    assertTrue(ModuleRootManager.getInstance(getModule("project_test")).isSdkInherited());
+    assertTrue(ModuleRootManager.getInstance(getModule("project.main")).isSdkInherited());
+    assertTrue(ModuleRootManager.getInstance(getModule("project.test")).isSdkInherited());
   }
 
   @Test
@@ -97,15 +98,33 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
     importProject(
       "apply plugin: 'java'\n" +
       "sourceCompatibility = 1.5\n" +
-      "apply plugin: 'java'\n" +
       "compileTestJava {\n" +
       "  sourceCompatibility = 1.8\n" +
       "}\n"
     );
 
-    assertModules("project", "project_main", "project_test");
-    assertEquals(LanguageLevel.JDK_1_5, getLanguageLevelForModule("project_main"));
-    assertEquals(LanguageLevel.JDK_1_8, getLanguageLevelForModule("project_test"));
+    assertModules("project", "project.main", "project.test");
+    assertEquals(LanguageLevel.JDK_1_5, getLanguageLevelForModule("project"));
+    assertEquals(LanguageLevel.JDK_1_5, getLanguageLevelForModule("project.main"));
+    assertEquals(LanguageLevel.JDK_1_8, getLanguageLevelForModule("project.test"));
+  }
+
+  @Test
+  public void testPreviewLanguageLevel() throws Exception {
+    importProject(
+      "apply plugin: 'java'\n" +
+      "sourceCompatibility = 14\n" +
+      "apply plugin: 'java'\n" +
+      "compileTestJava {\n" +
+      "  sourceCompatibility = 14\n" +
+      "  options.compilerArgs << '--enable-preview'" +
+      "}\n"
+    );
+
+    assertModules("project", "project.main", "project.test");
+    assertEquals(LanguageLevel.JDK_14, getLanguageLevelForModule("project"));
+    assertEquals(LanguageLevel.JDK_14, getLanguageLevelForModule("project.main"));
+    assertEquals(LanguageLevel.JDK_14_PREVIEW, getLanguageLevelForModule("project.test"));
   }
 
   @Test
@@ -118,9 +137,9 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
       "}\n"
     );
 
-    assertModules("project", "project_main", "project_test");
-    assertEquals("1.5", getBytecodeTargetLevel("project_main"));
-    assertEquals("1.8", getBytecodeTargetLevel("project_test"));
+    assertModules("project", "project.main", "project.test");
+    assertEquals("1.5", getBytecodeTargetLevelForModule("project.main"));
+    assertEquals("1.8", getBytecodeTargetLevelForModule("project.test"));
 
   }
 
@@ -139,9 +158,9 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
       "}\n"
     );
 
-    assertModules("project", "project_main", "project_test");
-    assertTrue(getSdkForModule("project_main") == myJdk);
-    assertTrue(getSdkForModule("project_test") == myJdk);
+    assertModules("project", "project.main", "project.test");
+    assertSame(getSdkForModule("project.main"), myJdk);
+    assertSame(getSdkForModule("project.test"), myJdk);
   }
 
   @Test
@@ -149,24 +168,167 @@ public class GradleMiscImportingTest extends GradleImportingTestCase {
     importProject(
       "apply plugin: 'java'"
     );
-    assertModules("project", "project_main", "project_test");
+    assertModules("project", "project.main", "project.test");
 
-    edt(() -> ModuleManager.getInstance(myProject).setUnloadedModules(list("project_main")));
-    assertModules("project", "project_test");
+    edt(() -> ModuleManager.getInstance(myProject).setUnloadedModules(Collections.singletonList("project.main")));
+    assertModules("project", "project.test");
 
     importProject();
-    assertModules("project", "project_test");
+    assertModules("project", "project.test");
   }
 
-  private LanguageLevel getLanguageLevelForModule(final String moduleName) {
-    return LanguageLevelModuleExtensionImpl.getInstance(getModule(moduleName)).getLanguageLevel();
+  @Test
+  public void testESLinkedProjectIds() throws Exception {
+    // main build
+    createSettingsFile("rootProject.name = 'multiproject'\n" +
+                       "include ':app'\n" +
+                       "include ':util'\n" +
+                       "includeBuild 'included-build'");
+    createProjectSubFile("build.gradle", "allprojects { apply plugin: 'java' }");
+
+    // main buildSrc
+    createProjectSubFile("buildSrc/settings.gradle", "include ':buildSrcSubProject'\n" +
+                                                     "include ':util'");
+    createProjectSubFile("buildSrc/build.gradle", "allprojects { apply plugin: 'java' }");
+
+    // included build with buildSrc
+    createProjectSubFile("included-build/settings.gradle", "rootProject.name = 'inc-build'\n" +
+                                                           "include ':util'");
+    createProjectSubFile("included-build/buildSrc/settings.gradle", "include ':util'");
+
+    importProject();
+    assertModules(
+      "multiproject",
+      "multiproject.main",
+      "multiproject.test",
+
+      "multiproject.buildSrc",
+      "multiproject.buildSrc.main",
+      "multiproject.buildSrc.test",
+
+      "multiproject.buildSrc.buildSrcSubProject",
+      "multiproject.buildSrc.buildSrcSubProject.main",
+      "multiproject.buildSrc.buildSrcSubProject.test",
+
+      "multiproject.buildSrc.util",
+      "multiproject.buildSrc.util.main",
+      "multiproject.buildSrc.util.test",
+
+      "multiproject.app",
+      "multiproject.app.main",
+      "multiproject.app.test",
+
+      "multiproject.util",
+      "multiproject.util.main",
+      "multiproject.util.test",
+
+      "inc-build",
+      "inc-build.util",
+
+      "inc-build.buildSrc",
+      "inc-build.buildSrc.util",
+      "inc-build.buildSrc.main",
+      "inc-build.buildSrc.test"
+    );
+
+    assertExternalProjectId("multiproject", "multiproject");
+    assertExternalProjectId("multiproject.main", "multiproject:main");
+    assertExternalProjectId("multiproject.test", "multiproject:test");
+
+    assertExternalProjectId("multiproject.buildSrc", "multiproject:buildSrc");
+    assertExternalProjectId("multiproject.buildSrc.main", "multiproject:buildSrc:main");
+    assertExternalProjectId("multiproject.buildSrc.test", "multiproject:buildSrc:test");
+
+    assertExternalProjectId("multiproject.buildSrc.buildSrcSubProject", "multiproject:buildSrc:buildSrcSubProject");
+    assertExternalProjectId("multiproject.buildSrc.buildSrcSubProject.main", "multiproject:buildSrc:buildSrcSubProject:main");
+    assertExternalProjectId("multiproject.buildSrc.buildSrcSubProject.test", "multiproject:buildSrc:buildSrcSubProject:test");
+
+    assertExternalProjectId("multiproject.buildSrc.util", "multiproject:buildSrc:util");
+    assertExternalProjectId("multiproject.buildSrc.util.main", "multiproject:buildSrc:util:main");
+    assertExternalProjectId("multiproject.buildSrc.util.test", "multiproject:buildSrc:util:test");
+
+    assertExternalProjectId("multiproject.app", ":app");
+    assertExternalProjectId("multiproject.app.main", ":app:main");
+    assertExternalProjectId("multiproject.app.test", ":app:test");
+
+    assertExternalProjectId("multiproject.util", ":util");
+    assertExternalProjectId("multiproject.util.main", ":util:main");
+    assertExternalProjectId("multiproject.util.test", ":util:test");
+
+    assertExternalProjectId("inc-build", "inc-build");
+    assertExternalProjectId("inc-build.util", "inc-build:util");
+
+    assertExternalProjectId("inc-build.buildSrc", "inc-build:buildSrc");
+    assertExternalProjectId("inc-build.buildSrc.util", "inc-build:buildSrc:util");
+    assertExternalProjectId("inc-build.buildSrc.main", "inc-build:buildSrc:main");
+    assertExternalProjectId("inc-build.buildSrc.test", "inc-build:buildSrc:test");
+
+    Map<String, ExternalProject> projectMap = getExternalProjectsMap();
+    assertExternalProjectIds(projectMap, "multiproject", "multiproject:main", "multiproject:test");
+    assertExternalProjectIds(projectMap, ":app", ":app:main", ":app:test");
+    assertExternalProjectIds(projectMap, ":util", ":util:main", ":util:test");
+    assertExternalProjectIds(projectMap, "inc-build", ArrayUtilRt.EMPTY_STRING_ARRAY);
+    assertExternalProjectIds(projectMap, "inc-build:util", ArrayUtilRt.EMPTY_STRING_ARRAY);
+
+    // Note, currently ExternalProject models are not exposed for "buildSrc" projects
   }
 
-  private String getBytecodeTargetLevel(String moduleName) {
-    return CompilerConfiguration.getInstance(myProject).getBytecodeTargetLevel(getModule(moduleName));
+  @Test
+  public void testSourceSetModuleNamesForDeduplicatedMainModule() throws Exception {
+    IdeModifiableModelsProvider modelsProvider = new IdeModifiableModelsProviderImpl(myProject);
+    modelsProvider.newModule(getProjectPath() + "/app.iml", StdModuleTypes.JAVA.getId());
+    modelsProvider.newModule(getProjectPath() + "/my_group.app.main.iml", StdModuleTypes.JAVA.getId());
+    edt(() -> ApplicationManager.getApplication().runWriteAction(modelsProvider::commit));
+
+    createSettingsFile("rootProject.name = 'app'");
+    importProject("apply plugin: 'java'\n" +
+                  "group 'my_group'");
+
+    assertModules("app", "my_group.app.main",
+                  "my_group.app", "my_group.app.main~1", "my_group.app.test");
+
+    assertNull(ExternalSystemApiUtil.getExternalProjectPath(getModule("app")));
+    assertNull(ExternalSystemApiUtil.getExternalProjectPath(getModule("my_group.app.main")));
+    assertEquals(getProjectPath(), ExternalSystemApiUtil.getExternalProjectPath(getModule("my_group.app")));
+    assertEquals(getProjectPath(), ExternalSystemApiUtil.getExternalProjectPath(getModule("my_group.app.main~1")));
+    assertEquals(getProjectPath(), ExternalSystemApiUtil.getExternalProjectPath(getModule("my_group.app.test")));
   }
 
-  private Sdk getSdkForModule(final String moduleName) {
-    return ModuleRootManager.getInstance(getModule(moduleName)).getSdk();
+  @Test
+  public void testImportingTasksWithSpaces() throws IOException {
+    importProject("project.tasks.create('descriptive task name') {}");
+    ExternalProjectInfo projectData =
+      ProjectDataManager.getInstance().getExternalProjectData(myProject, GradleConstants.SYSTEM_ID, getProjectPath());
+    DataNode<ModuleData> moduleNode = ExternalSystemApiUtil.find(projectData.getExternalProjectStructure(), ProjectKeys.MODULE);
+    Collection<DataNode<TaskData>> tasksNodes = ExternalSystemApiUtil.findAll(moduleNode, ProjectKeys.TASK);
+    List<String> taskNames = ContainerUtil.map(tasksNodes, node -> node.getData().getName());
+    assertThat(taskNames).containsOnlyOnce("\"descriptive task name\"");
+  }
+
+  private static void assertExternalProjectIds(Map<String, ExternalProject> projectMap, String projectId, String... sourceSetModulesIds) {
+    ExternalProject externalProject = projectMap.get(projectId);
+    assertEquals(projectId, externalProject.getId());
+    List<String> actualSourceSetModulesIds = ContainerUtil.map(
+      externalProject.getSourceSets().values(), sourceSet -> GradleProjectResolverUtil.getModuleId(externalProject, sourceSet));
+    assertSameElements(actualSourceSetModulesIds, sourceSetModulesIds);
+  }
+
+  @NotNull
+  private Map<String, ExternalProject> getExternalProjectsMap() {
+    ExternalProject rootExternalProject = ExternalProjectDataCache.getInstance(myProject).getRootExternalProject(getProjectPath());
+    final Map<String, ExternalProject> externalProjectMap = new THashMap<>();
+    if (rootExternalProject == null) return externalProjectMap;
+    ArrayDeque<ExternalProject> queue = new ArrayDeque<>();
+    queue.add(rootExternalProject);
+    ExternalProject externalProject;
+    while ((externalProject = queue.pollFirst()) != null) {
+      queue.addAll(externalProject.getChildProjects().values());
+      externalProjectMap.put(externalProject.getId(), externalProject);
+    }
+    return externalProjectMap;
+  }
+
+  private void assertExternalProjectId(String moduleName, String expectedId) {
+    assertEquals(expectedId, ExternalSystemApiUtil.getExternalProjectId(getModule(moduleName)));
   }
 }
