@@ -1,30 +1,39 @@
-// Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.gradle.service.execution;
 
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.PathManager;
+import com.intellij.openapi.application.ex.ApplicationInfoEx;
+import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskId;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskNotificationListener;
 import com.intellij.openapi.externalSystem.service.execution.ExternalSystemRunConfiguration;
+import com.intellij.openapi.externalSystem.util.OutputWrapper;
+import com.intellij.openapi.progress.ProcessCanceledException;
+import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.io.StreamUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.*;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.MultiMap;
 import org.gradle.initialization.BuildLayoutParameters;
 import org.gradle.internal.nativeintegration.services.NativeServices;
 import org.gradle.process.internal.JvmOptions;
 import org.gradle.tooling.*;
-import org.gradle.tooling.internal.consumer.DefaultGradleConnector;
+import org.gradle.tooling.events.OperationType;
+import org.gradle.tooling.model.BuildIdentifier;
+import org.gradle.tooling.model.UnsupportedMethodException;
 import org.gradle.tooling.model.build.BuildEnvironment;
 import org.gradle.util.GradleVersion;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.plugins.gradle.service.project.DistributionFactoryExt;
 import org.jetbrains.plugins.gradle.service.project.ProjectResolverContext;
 import org.jetbrains.plugins.gradle.settings.DistributionType;
 import org.jetbrains.plugins.gradle.settings.GradleExecutionSettings;
@@ -33,24 +42,21 @@ import org.jetbrains.plugins.gradle.util.GradleConstants;
 import org.jetbrains.plugins.gradle.util.GradleEnvironment;
 import org.jetbrains.plugins.gradle.util.GradleUtil;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import static org.jetbrains.plugins.gradle.GradleConnectorService.withGradleConnection;
+
 /**
  * @author Denis Zhdanov
- * @since 3/14/13 5:11 PM
  */
 public class GradleExecutionHelper {
 
   private static final Logger LOG = Logger.getInstance(GradleExecutionHelper.class);
 
-  @SuppressWarnings("MethodMayBeStatic")
   @NotNull
   public <T> ModelBuilder<T> getModelBuilder(@NotNull Class<T> modelType,
                                              @NotNull final ExternalSystemTaskId id,
@@ -64,7 +70,6 @@ public class GradleExecutionHelper {
     return result;
   }
 
-  @SuppressWarnings("MethodMayBeStatic")
   @NotNull
   public BuildLauncher getBuildLauncher(@NotNull final ExternalSystemTaskId id,
                                         @NotNull ProjectConnection connection,
@@ -77,14 +82,167 @@ public class GradleExecutionHelper {
     return result;
   }
 
+  public <T> T execute(@NotNull String projectPath,
+                       @Nullable GradleExecutionSettings settings,
+                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
+    return execute(projectPath, settings, null, null, null, f);
+  }
+
+  public <T> T execute(@NotNull String projectPath,
+                       @Nullable GradleExecutionSettings settings,
+                       @Nullable ExternalSystemTaskId taskId,
+                       @Nullable ExternalSystemTaskNotificationListener listener,
+                       @Nullable CancellationTokenSource cancellationTokenSource,
+                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
+    String projectDir;
+    File projectPathFile = new File(projectPath);
+    if (projectPathFile.isFile() && projectPath.endsWith(GradleConstants.EXTENSION) && projectPathFile.getParent() != null) {
+      projectDir = projectPathFile.getParent();
+      if (settings != null) {
+        List<String> arguments = settings.getArguments();
+        if (!arguments.contains("-b") && !arguments.contains("--build-file")) {
+          settings.withArguments("-b", projectPath);
+        }
+      }
+    }
+    else {
+      projectDir = projectPath;
+    }
+    CancellationToken cancellationToken = cancellationTokenSource != null ? cancellationTokenSource.token() : null;
+    return withGradleConnection(
+      projectDir, taskId, settings, listener, cancellationToken,
+      connection -> {
+        String userDir = null;
+        if (!GradleEnvironment.ADJUST_USER_DIR) {
+          try {
+            userDir = System.getProperty("user.dir");
+            if (userDir != null) System.setProperty("user.dir", projectDir);
+          }
+          catch (Exception ignore) {
+          }
+        }
+
+        try {
+          return f.fun(connection);
+        }
+        catch (ExternalSystemException e) {
+          throw e;
+        }
+        catch (ProcessCanceledException e) {
+          throw e;
+        }
+        catch (Throwable e) {
+          LOG.warn("Gradle execution error", e);
+          Throwable rootCause = ExceptionUtil.getRootCause(e);
+          ExternalSystemException externalSystemException =
+            new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+          externalSystemException.initCause(e);
+          throw externalSystemException;
+        }
+        finally {
+          if (userDir != null) {
+            // restore original user.dir property
+            System.setProperty("user.dir", userDir);
+          }
+        }
+      });
+  }
+
+  public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
+                                     @NotNull String projectPath,
+                                     @NotNull GradleExecutionSettings settings,
+                                     @NotNull ExternalSystemTaskNotificationListener listener,
+                                     @NotNull CancellationToken cancellationToken) {
+    ensureInstalledWrapper(id, projectPath, settings, null, listener, cancellationToken);
+  }
+
+  public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
+                                     @NotNull String projectPath,
+                                     @NotNull GradleExecutionSettings settings,
+                                     @Nullable GradleVersion gradleVersion,
+                                     @NotNull ExternalSystemTaskNotificationListener listener,
+                                     @NotNull CancellationToken cancellationToken) {
+
+    if (!settings.getDistributionType().isWrapped()) return;
+
+    if (settings.getDistributionType() == DistributionType.DEFAULT_WRAPPED &&
+        GradleUtil.findDefaultWrapperPropertiesFile(projectPath) != null) {
+      return;
+    }
+
+    withGradleConnection(
+      projectPath, id, settings, listener, cancellationToken,
+      connection -> {
+        long ttlInMs = settings.getRemoteProcessIdleTtlInMs();
+        try {
+          settings.setRemoteProcessIdleTtlInMs(100);
+          try {
+            final File wrapperFilesLocation = FileUtil.createTempDirectory("wrap", "loc");
+            final String fileName = "gradle-wrapper";
+            final File jarFile = new File(wrapperFilesLocation, fileName + ".jar");
+            final File scriptFile = new File(wrapperFilesLocation, "gradlew");
+            final File pathToProperties = new File(wrapperFilesLocation, "path.tmp");
+
+            Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtil.delete(wrapperFilesLocation), "GradleExecutionHelper cleanup"));
+
+            StringJoiner lines = new StringJoiner(SystemProperties.getLineSeparator());
+            lines.add("");
+            lines.add("gradle.projectsEvaluated { gr ->");
+            lines.add("  def wrapper = gr.rootProject.tasks[\"wrapper\"]");
+            lines.add("  if (wrapper != null) {");
+            lines.add("    if (wrapper.jarFile.exists()) {");
+            lines.add("      wrapper.jarFile = new File('" + StringUtil.escapeBackSlashes(jarFile.getCanonicalPath()) + "')");
+            lines.add("      wrapper.scriptFile = new File('" + StringUtil.escapeBackSlashes(scriptFile.getCanonicalPath()) + "')");
+            lines.add("    }");
+            if (gradleVersion != null) {
+              lines.add("    wrapper.gradleVersion = '" + gradleVersion.getVersion() + "'");
+            }
+            lines.add("    wrapper.doLast {");
+            lines.add("      new File('" +
+                      StringUtil.escapeBackSlashes(pathToProperties.getCanonicalPath()) +
+                      "').write wrapper.propertiesFile.getCanonicalPath()");
+            lines.add("    }");
+            lines.add("  }");
+            lines.add("}");
+            lines.add("");
+            final File tempFile = writeToFileGradleInitScript(lines.toString(), "wrapper_init");
+            settings.withArguments(GradleConstants.INIT_SCRIPT_CMD_OPTION, tempFile.getAbsolutePath());
+            BuildLauncher launcher = getBuildLauncher(id, connection, settings, listener);
+            launcher.withCancellationToken(cancellationToken);
+            launcher.forTasks("wrapper");
+            launcher.run();
+            settings.setWrapperPropertyFile(FileUtil.loadFile(pathToProperties));
+          }
+          catch (IOException e) {
+            LOG.warn("Can't update wrapper", e);
+          }
+        }
+        catch (ProcessCanceledException e) {
+          throw e;
+        }
+        catch (Throwable e) {
+          LOG.warn("Can't update wrapper", e);
+          Throwable rootCause = ExceptionUtil.getRootCause(e);
+          ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
+          externalSystemException.initCause(e);
+          throw externalSystemException;
+        }
+        finally {
+          settings.setRemoteProcessIdleTtlInMs(ttlInMs);
+        }
+        return null;
+      }
+    );
+  }
+
   @Nullable
   public static BuildEnvironment getBuildEnvironment(ProjectResolverContext projectResolverContext) {
     return getBuildEnvironment(projectResolverContext.getConnection(),
                                projectResolverContext.getExternalSystemTaskId(),
-                               projectResolverContext.getListener());
+                               projectResolverContext.getListener(),
+                               projectResolverContext.getCancellationTokenSource());
   }
 
-  @SuppressWarnings("IOResourceOpenedButNotSafelyClosed")
   public static void prepare(@NotNull LongRunningOperation operation,
                              @NotNull final ExternalSystemTaskId id,
                              @NotNull GradleExecutionSettings settings,
@@ -93,7 +251,6 @@ public class GradleExecutionHelper {
     prepare(operation, id, settings, listener, connection, new OutputWrapper(listener, id, true), new OutputWrapper(listener, id, false));
   }
 
-  @SuppressWarnings("IOResourceOpenedButNotSafelyClosed")
   public static void prepare(@NotNull LongRunningOperation operation,
                              @NotNull final ExternalSystemTaskId id,
                              @NotNull GradleExecutionSettings settings,
@@ -101,20 +258,30 @@ public class GradleExecutionHelper {
                              @NotNull ProjectConnection connection,
                              @NotNull final OutputStream standardOutput,
                              @NotNull final OutputStream standardError) {
-    Set<String> jvmArgs = settings.getVmOptions();
-    BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener);
+    List<String> jvmArgs = settings.getJvmArguments();
+    BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener, (CancellationToken)null);
 
     String gradleVersion = buildEnvironment != null ? buildEnvironment.getGradle().getGradleVersion() : null;
     if (!jvmArgs.isEmpty()) {
       // merge gradle args e.g. defined in gradle.properties
-      Collection<String> merged = buildEnvironment != null
-                                  ? mergeJvmArgs(settings.getServiceDirectory(), buildEnvironment.getJava().getJvmArguments(), jvmArgs)
-                                  : jvmArgs;
+      Collection<String> merged;
+      if (buildEnvironment != null) {
+        // the BuildEnvironment jvm arguments of the main build should be used for the 'buildSrc' import
+        // to avoid spawning of the second gradle daemon
+        BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
+        List<String> buildJvmArguments = buildIdentifier == null || "buildSrc".equals(buildIdentifier.getRootDir().getName())
+                                         ? ContainerUtil.emptyList()
+                                         : buildEnvironment.getJava().getJvmArguments();
+        merged = mergeJvmArgs(settings.getServiceDirectory(), buildJvmArguments, jvmArgs);
+      }
+      else {
+        merged = jvmArgs;
+      }
 
       // filter nulls and empty strings
       List<String> filteredArgs = ContainerUtil.mapNotNull(merged, s -> StringUtil.isEmpty(s) ? null : s);
 
-      operation.setJvmArguments(ArrayUtil.toStringArray(filteredArgs));
+      operation.setJvmArguments(ArrayUtilRt.toStringArray(filteredArgs));
     }
 
     if (settings.isOfflineWork()) {
@@ -124,39 +291,64 @@ public class GradleExecutionHelper {
     final Application application = ApplicationManager.getApplication();
     if (application != null && application.isUnitTestMode()) {
       if (!settings.getArguments().contains("--quiet")) {
-        settings.withArgument("--info");
+        if (!settings.getArguments().contains("--debug")) {
+          settings.withArgument("--info");
+        }
       }
-      settings.withArgument("--recompile-scripts");
     }
 
+    List<String> filteredArgs = new ArrayList<>();
     if (!settings.getArguments().isEmpty()) {
       String loggableArgs = StringUtil.join(obfuscatePasswordParameters(settings.getArguments()), " ");
       LOG.info("Passing command-line args to Gradle Tooling API: " + loggableArgs);
 
       // filter nulls and empty strings
-      List<String> filteredArgs = ContainerUtil.mapNotNull(settings.getArguments(), s -> StringUtil.isEmpty(s) ? null : s);
+      filteredArgs.addAll(ContainerUtil.mapNotNull(settings.getArguments(), s -> StringUtil.isEmpty(s) ? null : s));
 
       // TODO remove this replacement when --tests option will become available for tooling API
       replaceTestCommandOptionWithInitScript(filteredArgs);
-      operation.withArguments(ArrayUtil.toStringArray(filteredArgs));
     }
+    filteredArgs.add("-Didea.active=true");
+    filteredArgs.add("-Didea.version=" + getIdeaVersion());
+    operation.withArguments(ArrayUtilRt.toStringArray(filteredArgs));
+
     setupEnvironment(operation, settings, gradleVersion, id, listener);
 
     final String javaHome = settings.getJavaHome();
     if (javaHome != null && new File(javaHome).isDirectory()) {
+      LOG.debug("Java home to set for Gradle operation: " + javaHome);
       operation.setJavaHome(new File(javaHome));
     }
 
-    String buildRootDir = buildEnvironment == null ? null : buildEnvironment.getBuildIdentifier().getRootDir().getPath();
+    String buildRootDir;
+    if (buildEnvironment == null) {
+      buildRootDir = null;
+    }
+    else {
+      BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
+      buildRootDir = buildIdentifier == null ? null : buildIdentifier.getRootDir().getPath();
+    }
     GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, id, buildRootDir);
     operation.addProgressListener((ProgressListener)gradleProgressListener);
-    operation.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+    operation.addProgressListener(gradleProgressListener,
+                                  OperationType.TASK,
+                                  OperationType.TEST);
     operation.setStandardOutput(standardOutput);
     operation.setStandardError(standardError);
     InputStream inputStream = settings.getUserData(ExternalSystemRunConfiguration.RUN_INPUT_KEY);
     if (inputStream != null) {
       operation.setStandardInput(inputStream);
     }
+  }
+
+  @Nullable
+  private static BuildIdentifier getBuildIdentifier(@NotNull BuildEnvironment buildEnvironment) {
+    try {
+      return buildEnvironment.getBuildIdentifier();
+    }
+    catch (UnsupportedMethodException ignore) {
+    }
+    return null;
   }
 
   private static void setupEnvironment(@NotNull LongRunningOperation operation,
@@ -183,257 +375,148 @@ public class GradleExecutionHelper {
     operation.setEnvironmentVariables(effectiveEnvironment);
   }
 
-  public <T> T execute(@NotNull String projectPath, @Nullable GradleExecutionSettings settings, @NotNull Function<ProjectConnection, T> f) {
-
-    final String projectDir;
-    final File projectPathFile = new File(projectPath);
-    if (projectPathFile.isFile() && projectPath.endsWith(GradleConstants.EXTENSION)
-        && projectPathFile.getParent() != null) {
-      projectDir = projectPathFile.getParent();
-    }
-    else {
-      projectDir = projectPath;
-    }
-
-    String userDir = null;
-    if (!GradleEnvironment.ADJUST_USER_DIR) {
-      try {
-        userDir = System.getProperty("user.dir");
-        if (userDir != null) System.setProperty("user.dir", projectDir);
-      }
-      catch (Exception ignore) {
-      }
-    }
-    ProjectConnection connection = getConnection(projectDir, settings);
-    try {
-      return f.fun(connection);
-    }
-    catch (ExternalSystemException e) {
-      throw e;
-    }
-    catch (Throwable e) {
-      LOG.debug("Gradle execution error", e);
-      Throwable rootCause = ExceptionUtil.getRootCause(e);
-      throw new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
-    }
-    finally {
-      try {
-        connection.close();
-        if (userDir != null) {
-          // restore original user.dir property
-          System.setProperty("user.dir", userDir);
-        }
-      }
-      catch (Throwable e) {
-        LOG.debug("Gradle connection close error", e);
-      }
-    }
-  }
-
-  public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
-                                     @NotNull String projectPath,
-                                     @NotNull GradleExecutionSettings settings,
-                                     @NotNull ExternalSystemTaskNotificationListener listener) {
-
-    if (!settings.getDistributionType().isWrapped()) return;
-
-    if (settings.getDistributionType() == DistributionType.DEFAULT_WRAPPED &&
-        GradleUtil.findDefaultWrapperPropertiesFile(projectPath) != null) {
-      return;
-    }
-
-    final long ttlInMs = settings.getRemoteProcessIdleTtlInMs();
-    ProjectConnection connection = getConnection(projectPath, settings);
-    try {
-      settings.setRemoteProcessIdleTtlInMs(100);
-      try {
-        final File wrapperPropertyFileLocation = FileUtil.createTempFile("wrap", "loc");
-        wrapperPropertyFileLocation.deleteOnExit();
-        final String[] lines = {
-          "",
-          "gradle.taskGraph.afterTask { Task task ->",
-          "    if (task instanceof Wrapper) {",
-          "        def wrapperPropertyFileLocation = task.jarFile.getCanonicalPath() - '.jar' + '.properties'",
-          "        new File('" +
-          StringUtil.escapeBackSlashes(wrapperPropertyFileLocation.getCanonicalPath()) +
-          "').write wrapperPropertyFileLocation",
-          "}}",
-          "",
-        };
-        final File tempFile = writeToFileGradleInitScript(StringUtil.join(lines, SystemProperties.getLineSeparator()));
-        settings.withArguments(GradleConstants.INIT_SCRIPT_CMD_OPTION, tempFile.getAbsolutePath());
-        BuildLauncher launcher = getBuildLauncher(id, connection, settings, listener);
-        launcher.forTasks("wrapper");
-        launcher.run();
-        String wrapperPropertyFile = FileUtil.loadFile(wrapperPropertyFileLocation);
-        settings.setWrapperPropertyFile(wrapperPropertyFile);
-      }
-      catch (IOException e) {
-        LOG.warn("Can't update wrapper", e);
-      }
-    }
-    catch (Throwable e) {
-      LOG.warn("Can't update wrapper", e);
-    }
-    finally {
-      settings.setRemoteProcessIdleTtlInMs(ttlInMs);
-      try {
-        connection.close();
-      }
-      catch (Throwable e) {
-        // ignore
-      }
-    }
-  }
-
-  private static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, Set<String> jvmArgsFromIdeSettings) {
+  @ApiStatus.Experimental
+  static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
     File gradleUserHomeDir = serviceDirectory != null ? new File(serviceDirectory) : new BuildLayoutParameters().getGradleUserHomeDir();
     LOG.debug("Gradle home: " + gradleUserHomeDir);
     NativeServices.initialize(gradleUserHomeDir);
-    Map<String, String> mergedArgs = new LinkedHashMap<>();
-    for (String jvmArg : ContainerUtil.concat(jvmArgs, jvmArgsFromIdeSettings)) {
-      int i = jvmArg.indexOf('=');
-      if(i <= 0) {
-        mergedArgs.put(jvmArg, "");
-      } else {
-        mergedArgs.put(jvmArg.substring(0, i), jvmArg.substring(i));
-      }
-    }
-
-    List<String> mergedList = new ArrayList<>();
-    for (Map.Entry<String, String> entry : mergedArgs.entrySet()) {
-      mergedList.add(entry.getKey() + entry.getValue());
-    }
     JvmOptions jvmOptions = new JvmOptions(null);
-    jvmOptions.setAllJvmArgs(mergedList);
+    List<String> mergedJvmArgs = mergeJvmArgs(jvmArgs, jvmArgsFromIdeSettings);
+    jvmOptions.setAllJvmArgs(mergedJvmArgs);
     return jvmOptions.getAllJvmArgs();
   }
 
-  /**
-   * Allows to retrieve gradle api connection to use for the given project.
-   *
-   * @param projectPath target project path
-   * @param settings    execution settings to use
-   * @return connection to use
-   * @throws IllegalStateException if it's not possible to create the connection
-   */
-  @NotNull
-  private static ProjectConnection getConnection(@NotNull String projectPath,
-                                                 @Nullable GradleExecutionSettings settings)
-    throws IllegalStateException {
-    File projectDir = new File(projectPath);
-    GradleConnector connector = GradleConnector.newConnector();
-    int ttl = -1;
-
-    if (settings != null) {
-      File gradleHome = settings.getGradleHome() == null ? null : new File(settings.getGradleHome());
-      //noinspection EnumSwitchStatementWhichMissesCases
-      switch (settings.getDistributionType()) {
-        case LOCAL:
-          if (gradleHome != null) {
-            connector.useInstallation(gradleHome);
-          }
-          break;
-        case WRAPPED:
-          if (settings.getWrapperPropertyFile() != null) {
-            DistributionFactoryExt.setWrappedDistribution(connector, settings.getWrapperPropertyFile(), gradleHome);
-          }
-          break;
+  @ApiStatus.Experimental
+  static List<String> mergeJvmArgs(List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
+    MultiMap<String, String> argumentsMap = MultiMap.createLinkedSet();
+    String lastKey = null;
+    for (String jvmArg : ContainerUtil.concat(jvmArgs, jvmArgsFromIdeSettings)) {
+      if (jvmArg.startsWith("-")) {
+        argumentsMap.putValue(jvmArg, "");
+        lastKey = jvmArg;
       }
-
-      // Setup service directory if necessary.
-      String serviceDirectory = settings.getServiceDirectory();
-      if (serviceDirectory != null) {
-        connector.useGradleUserHomeDir(new File(serviceDirectory));
+      else {
+        if (lastKey != null) {
+          argumentsMap.putValue(lastKey, jvmArg);
+          lastKey = null;
+        }
+        else {
+          argumentsMap.putValue(jvmArg, "");
+        }
       }
-
-      // Setup logging if necessary.
-      if (settings.isVerboseProcessing() && connector instanceof DefaultGradleConnector) {
-        ((DefaultGradleConnector)connector).setVerboseLogging(true);
-      }
-      ttl = (int)settings.getRemoteProcessIdleTtlInMs();
     }
 
-    // do not spawn gradle daemons during test execution
-    final Application app = ApplicationManager.getApplication();
-    ttl = (app != null && app.isUnitTestMode()) ? 10000 : ttl;
+    Map<String, String> mergedKeys = new LinkedHashMap<>();
+    Set<String> argKeySet = new LinkedHashSet<>(argumentsMap.keySet());
+    for (String argKey : argKeySet) {
+      Collection<String> values = argumentsMap.getModifiable(argKey);
+      if (values.size() == 1 && values.iterator().next().isEmpty()) {
+        Couple<String> couple = splitArg(argKey);
+        mergedKeys.put(couple.first, couple.second);
+      }
+      else {
+        mergedKeys.put(argKey, "");
+        Map<String, String> mergedArgs = new LinkedHashMap<>();
+        for (String jvmArg : values) {
+          if (jvmArg.isEmpty()) continue;
+          Couple<String> couple = splitArg(jvmArg);
+          mergedArgs.put(couple.first, couple.second);
+        }
+        values.clear();
+        mergedArgs.forEach((key, value) -> values.add(key + value));
+      }
+    }
 
-    if (ttl > 0 && connector instanceof DefaultGradleConnector) {
-      ((DefaultGradleConnector)connector).daemonMaxIdleTime(ttl, TimeUnit.MILLISECONDS);
-    }
-    connector.forProjectDirectory(projectDir);
-    ProjectConnection connection = connector.connect();
-    if (connection == null) {
-      throw new IllegalStateException(String.format(
-        "Can't create connection to the target project via gradle tooling api. Project path: '%s'", projectPath
-      ));
-    }
-    return connection;
+    List<String> mergedArgs = new SmartList<>();
+    mergedKeys.forEach((s1, s2) -> mergedArgs.add(s1 + s2));
+    argKeySet.stream().filter(argKey -> !mergedArgs.contains(argKey)).forEach(argumentsMap::remove);
+
+    // remove `--add-opens` options, because same options will be added by gradle producing the option duplicates.
+    // And the daemon will become uncompilable with the CLI invocations.
+    // see https://github.com/gradle/gradle/blob/v5.1.1/subprojects/launcher/src/main/java/org/gradle/launcher/daemon/configuration/DaemonParameters.java#L125
+    argumentsMap.remove("--add-opens");
+
+    List<String> result = new SmartList<>();
+    argumentsMap.keySet().forEach(key -> argumentsMap.get(key).forEach(val -> {
+      result.add(key);
+      if (StringUtil.isNotEmpty(val)) {
+        result.add(val);
+      }
+    }));
+    return result;
+  }
+
+  private static Couple<String> splitArg(String arg) {
+    int i = arg.indexOf('=');
+    return i <= 0 ? Couple.of(arg, "") : Couple.of(arg.substring(0, i), arg.substring(i));
   }
 
   @Nullable
-  public static File generateInitScript(boolean isBuildSrcProject, @NotNull Set<Class> toolingExtensionClasses) {
+  public static File generateInitScript(boolean isBuildSrcProject, @NotNull Set<Class<?>> toolingExtensionClasses) {
     InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/init.gradle");
-    try {
-      if (stream == null) {
-        LOG.warn("Can't get init script template");
-        return null;
-      }
-      final String toolingExtensionsJarPaths = getToolingExtensionsJarPaths(toolingExtensionClasses);
-      String script = FileUtil.loadTextAndClose(stream).replaceFirst(Pattern.quote("${EXTENSIONS_JARS_PATH}"), toolingExtensionsJarPaths);
+    if (stream == null) {
+      LOG.warn("Can't find init script template");
+      return null;
+    }
+    try (Reader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
+      String toolingExtensionsJarPaths = getToolingExtensionsJarPaths(toolingExtensionClasses);
+      String script = StreamUtil.readText(reader).replaceFirst(Pattern.quote("${EXTENSIONS_JARS_PATH}"), toolingExtensionsJarPaths);
       if (isBuildSrcProject) {
         String buildSrcDefaultInitScript = getBuildSrcDefaultInitScript();
         if (buildSrcDefaultInitScript == null) return null;
         script += buildSrcDefaultInitScript;
       }
 
-      return writeToFileGradleInitScript(script);
+      return writeToFileGradleInitScript(script, "ijinit");
     }
     catch (Exception e) {
       LOG.warn("Can't generate IJ gradle init script", e);
       return null;
     }
-    finally {
-      StreamUtil.closeStream(stream);
-    }
-  }
-
-  public static File writeToFileGradleInitScript(@NotNull String content) throws IOException {
-    return writeToFileGradleInitScript(content, "ijinit");
   }
 
   public static File writeToFileGradleInitScript(@NotNull String content, @NotNull String filePrefix) throws IOException {
-    File tempFile = new File(FileUtil.getTempDirectory(), filePrefix + '.' + GradleConstants.EXTENSION);
-    if (tempFile.exists() && StringUtil.equals(content, FileUtil.loadFile(tempFile))) {
-      return tempFile;
-    }
-    tempFile = FileUtil.findSequentNonexistentFile(tempFile.getParentFile(), filePrefix, GradleConstants.EXTENSION);
-    FileUtil.writeToFile(tempFile, content);
-    tempFile.deleteOnExit();
-    return tempFile;
+    byte[] contentBytes = content.getBytes(StandardCharsets.UTF_8);
+    int contentLength = contentBytes.length;
+    return FileUtil.findSequentFile(new File(FileUtil.getTempDirectory()), filePrefix, GradleConstants.EXTENSION, file -> {
+      try {
+        if (!file.exists()) {
+          FileUtil.writeToFile(file, contentBytes, false);
+          file.deleteOnExit();
+          return true;
+        }
+        if (contentLength != file.length()) return false;
+        return content.equals(FileUtil.loadFile(file, StandardCharsets.UTF_8));
+      }
+      catch (IOException ignore) {
+        // Skip file with access issues. Will attempt to check the next file
+      }
+      return false;
+    });
   }
 
   @Nullable
   public static String getBuildSrcDefaultInitScript() {
     InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/buildSrcInit.gradle");
-    try {
-      if (stream == null) return null;
-      return FileUtil.loadTextAndClose(stream);
+    if (stream == null) {
+      LOG.warn("Can't find default init script template");
+      return null;
+    }
+    try (Reader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
+      return StreamUtil.readText(reader);
     }
     catch (Exception e) {
       LOG.warn("Can't use IJ gradle init script", e);
       return null;
-    }
-    finally {
-      StreamUtil.closeStream(stream);
     }
   }
 
   @Nullable
   public static GradleVersion getGradleVersion(@NotNull ProjectConnection connection,
                                                @NotNull ExternalSystemTaskId taskId,
-                                               @NotNull ExternalSystemTaskNotificationListener listener) {
-    final BuildEnvironment buildEnvironment = getBuildEnvironment(connection, taskId, listener);
+                                               @NotNull ExternalSystemTaskNotificationListener listener,
+                                               @Nullable CancellationTokenSource cancellationTokenSource) {
+    final BuildEnvironment buildEnvironment = getBuildEnvironment(connection, taskId, listener, cancellationTokenSource);
 
     GradleVersion gradleVersion = null;
     if (buildEnvironment != null) {
@@ -445,36 +528,55 @@ public class GradleExecutionHelper {
   @Nullable
   public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
                                                      @NotNull ExternalSystemTaskId taskId,
-                                                     @NotNull ExternalSystemTaskNotificationListener listener) {
-    ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
-    // do not use connection.getModel methods since it doesn't allow to handle progress events
-    // and we can miss gradle tooling client side events like distribution download.
-    GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
-    modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
-    modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
-    modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
-    modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
+                                                     @NotNull ExternalSystemTaskNotificationListener listener,
+                                                     @Nullable CancellationTokenSource cancellationTokenSource) {
+    CancellationToken cancellationToken = cancellationTokenSource != null ? cancellationTokenSource.token() : null;
+    return getBuildEnvironment(connection, taskId, listener, cancellationToken);
+  }
 
-    final BuildEnvironment buildEnvironment = modelBuilder.get();
-    if (LOG.isDebugEnabled()) {
-      try {
-        LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
-        LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
-        LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
+  @Nullable
+  public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
+                                                     @NotNull ExternalSystemTaskId taskId,
+                                                     @NotNull ExternalSystemTaskNotificationListener listener,
+                                                     @Nullable CancellationToken cancellationToken) {
+    BuildEnvironment buildEnvironment = null;
+    try {
+      ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
+      if (cancellationToken != null) {
+        modelBuilder.withCancellationToken(cancellationToken);
       }
-      catch (Throwable t) {
-        LOG.debug(t);
+      // do not use connection.getModel methods since it doesn't allow to handle progress events
+      // and we can miss gradle tooling client side events like distribution download.
+      GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
+      modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
+      modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+      modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
+      modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
+
+      buildEnvironment = modelBuilder.get();
+      if (LOG.isDebugEnabled()) {
+        try {
+          LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
+          LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
+          LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
+        }
+        catch (Throwable t) {
+          LOG.debug(t);
+        }
       }
+    }
+    catch (Throwable t) {
+      LOG.debug(t);
     }
     return buildEnvironment;
   }
 
   private static void replaceTestCommandOptionWithInitScript(@NotNull List<String> args) {
-    Set<String> testIncludePatterns = ContainerUtil.newLinkedHashSet();
+    Set<String> testIncludePatterns = new LinkedHashSet<>();
     Iterator<String> it = args.iterator();
     while (it.hasNext()) {
       final String next = it.next();
-      if ("--tests".equals(next)) {
+      if (GradleConstants.TESTS_ARG_NAME.equals(next)) {
         it.remove();
         if (it.hasNext()) {
           testIncludePatterns.add(it.next());
@@ -487,7 +589,8 @@ public class GradleExecutionHelper {
       buf.append('[');
       for (Iterator<String> iterator = testIncludePatterns.iterator(); iterator.hasNext(); ) {
         String pattern = iterator.next();
-        buf.append('\'').append(pattern).append('\'');
+        String groovyPattern = toGroovyString(pattern);
+        buf.append('\'').append(groovyPattern).append('\'');
         if (iterator.hasNext()) {
           buf.append(',');
         }
@@ -501,32 +604,56 @@ public class GradleExecutionHelper {
     }
   }
 
+  @NotNull
+  public static String toGroovyString(@NotNull String string) {
+    StringBuilder stringBuilder = new StringBuilder();
+    for (char ch : string.toCharArray()) {
+      if (ch == '\\') {
+        stringBuilder.append("\\\\");
+      }
+      else if (ch == '\'') {
+        stringBuilder.append("\\'");
+      }
+      else if (ch == '"') {
+        stringBuilder.append("\\\"");
+      }
+      else {
+        stringBuilder.append(ch);
+      }
+    }
+    return stringBuilder.toString();
+  }
+
   @Nullable
   public static String renderInitScript(@NotNull String testArgs) {
     InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/testFilterInit.gradle");
-    try {
-      if (stream == null) {
-        LOG.error("Can't get test filter init script template");
-        return null;
-      }
-      String script = FileUtil.loadTextAndClose(stream).replaceFirst(Pattern.quote("${TEST_NAME_INCLUDES}"), Matcher.quoteReplacement(testArgs));
-      final File tempFile = writeToFileGradleInitScript(script, "ijtestinit");
+    if (stream == null) {
+      LOG.error("Can't find test filter init script template");
+      return null;
+    }
+    try (Reader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
+      String script = StreamUtil.readText(reader).replaceFirst(Pattern.quote("${TEST_NAME_INCLUDES}"), Matcher.quoteReplacement(testArgs));
+      File tempFile = writeToFileGradleInitScript(script, "ijtestinit");
       return tempFile.getAbsolutePath();
     }
     catch (Exception e) {
       LOG.warn("Can't generate IJ gradle test filter init script", e);
       return null;
     }
-    finally {
-      StreamUtil.closeStream(stream);
-    }
   }
 
   @NotNull
-  private static String getToolingExtensionsJarPaths(@NotNull Set<Class> toolingExtensionClasses) {
+  public static String getToolingExtensionsJarPaths(@NotNull Set<Class<?>> toolingExtensionClasses) {
     final Set<String> jarPaths = ContainerUtil.map2SetNotNull(toolingExtensionClasses, aClass -> {
       String path = PathManager.getJarPathForClass(aClass);
-      return path == null ? null : PathUtil.getCanonicalPath(path);
+      if (path != null) {
+        if (FileUtilRt.getNameWithoutExtension(path).equals("gradle-api-" + GradleVersion.current().getBaseVersion())) {
+          LOG.warn("The gradle api jar shouldn't be added to the gradle daemon classpath: {" + aClass + "," + path + "}");
+          return null;
+        }
+        return FileUtil.toCanonicalPath(path);
+      }
+      return null;
     });
     StringBuilder buf = new StringBuilder();
     buf.append('[');
@@ -539,41 +666,6 @@ public class GradleExecutionHelper {
     }
     buf.append(']');
     return buf.toString();
-  }
-
-  /* deprecated methods to be removed in future version */
-
-  /**
-   * @deprecated {@link #getModelBuilder(Class, ExternalSystemTaskId, GradleExecutionSettings, ProjectConnection, ExternalSystemTaskNotificationListener)}
-   */
-  @SuppressWarnings("MethodMayBeStatic")
-  @NotNull
-  public <T> ModelBuilder<T> getModelBuilder(@NotNull Class<T> modelType,
-                                             @NotNull final ExternalSystemTaskId id,
-                                             @Nullable GradleExecutionSettings settings,
-                                             @NotNull ProjectConnection connection,
-                                             @NotNull ExternalSystemTaskNotificationListener listener,
-                                             @NotNull List<String> extraJvmArgs) {
-    ModelBuilder<T> result = connection.model(modelType);
-    prepare(result, id, settings, listener, extraJvmArgs, ContainerUtil.newArrayList(), connection);
-    return result;
-  }
-
-
-  /**
-   * @deprecated {@link #getBuildLauncher(ExternalSystemTaskId, ProjectConnection, GradleExecutionSettings, ExternalSystemTaskNotificationListener)}
-   */
-  @SuppressWarnings("MethodMayBeStatic")
-  @NotNull
-  public BuildLauncher getBuildLauncher(@NotNull final ExternalSystemTaskId id,
-                                        @NotNull ProjectConnection connection,
-                                        @Nullable GradleExecutionSettings settings,
-                                        @NotNull ExternalSystemTaskNotificationListener listener,
-                                        @NotNull final List<String> vmOptions,
-                                        @NotNull final List<String> commandLineArgs) {
-    BuildLauncher result = connection.newBuild();
-    prepare(result, id, settings, listener, vmOptions, commandLineArgs, connection);
-    return result;
   }
 
   @NotNull
@@ -595,51 +687,8 @@ public class GradleExecutionHelper {
     return replaced;
   }
 
-  /**
-   * @deprecated to be removed in future version
-   */
-  @SuppressWarnings("IOResourceOpenedButNotSafelyClosed")
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @Nullable GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull List<String> extraJvmArgs,
-                             @NotNull ProjectConnection connection) {
-    if (settings == null) return;
-    settings.withVmOptions(extraJvmArgs);
-    prepare(operation, id, settings, listener, connection, new OutputWrapper(listener, id, true), new OutputWrapper(listener, id, false));
-  }
-
-  /**
-   * @deprecated use {@link #prepare(LongRunningOperation, ExternalSystemTaskId, GradleExecutionSettings, ExternalSystemTaskNotificationListener, ProjectConnection)}
-   */
-  @SuppressWarnings("IOResourceOpenedButNotSafelyClosed")
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @Nullable GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull List<String> extraJvmArgs,
-                             @NotNull List<String> commandLineArgs,
-                             @NotNull ProjectConnection connection) {
-    if (settings == null) return;
-    settings.withArguments(commandLineArgs).withVmOptions(extraJvmArgs);
-    prepare(operation, id, settings, listener, connection, new OutputWrapper(listener, id, true), new OutputWrapper(listener, id, false));
-  }
-
-  /**
-   * @deprecated use {@link #prepare(LongRunningOperation, ExternalSystemTaskId, GradleExecutionSettings, ExternalSystemTaskNotificationListener, ProjectConnection, OutputStream, OutputStream)}
-   */
-  @SuppressWarnings("IOResourceOpenedButNotSafelyClosed")
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @NotNull GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull List<String> extraJvmArgs,
-                             @NotNull List<String> commandLineArgs,
-                             @NotNull ProjectConnection connection,
-                             @NotNull final OutputStream standardOutput,
-                             @NotNull final OutputStream standardError) {
-    settings.withArguments(commandLineArgs).withVmOptions(extraJvmArgs);
-    prepare(operation, id, settings, listener, connection, standardOutput, standardError);
+  private static String getIdeaVersion() {
+    ApplicationInfoEx appInfo = ApplicationInfoImpl.getShadowInstance();
+    return appInfo.getMajorVersion() + "." + appInfo.getMinorVersion();
   }
 }
