@@ -1,6 +1,6 @@
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.idea.maven.dom.model.completion;
 
-import com.google.common.collect.ImmutableSet;
 import com.intellij.codeInsight.actions.ReformatCodeProcessor;
 import com.intellij.codeInsight.completion.*;
 import com.intellij.codeInsight.lookup.LookupElement;
@@ -12,7 +12,6 @@ import com.intellij.psi.PsiFile;
 import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.psi.xml.XmlFile;
 import com.intellij.psi.xml.XmlTag;
-import com.intellij.util.Consumer;
 import com.intellij.util.xml.DomElement;
 import com.intellij.util.xml.DomFileDescription;
 import com.intellij.util.xml.DomManager;
@@ -21,6 +20,7 @@ import org.jetbrains.idea.maven.dom.MavenDomProjectModelDescription;
 import org.jetbrains.idea.maven.dom.MavenDomUtil;
 import org.jetbrains.idea.maven.dom.converters.MavenDependencyCompletionUtil;
 import org.jetbrains.idea.maven.dom.model.MavenDomDependency;
+import org.jetbrains.idea.maven.dom.model.MavenDomExclusion;
 
 import java.util.Set;
 
@@ -28,8 +28,7 @@ import java.util.Set;
  * @author Sergey Evdokimov
  */
 public class MavenPomXmlCompletionTagListenerContributor extends CompletionContributor {
-
-  private final Set<String> myHandledTags = ImmutableSet.of("dependency");
+  private final Set<String> myHandledTags = Set.of("dependency", "exclusion");
 
   @Override
   public void fillCompletionVariants(@NotNull CompletionParameters parameters, @NotNull final CompletionResultSet result) {
@@ -49,16 +48,15 @@ public class MavenPomXmlCompletionTagListenerContributor extends CompletionContr
     result.runRemainingContributors(parameters, r -> {
       final LookupElement lookupElement = r.getLookupElement();
 
-      if (myHandledTags.contains(lookupElement.getLookupString())) {
+      final String lookupString = lookupElement.getLookupString();
+      if (myHandledTags.contains(lookupString)) {
         LookupElement decorator =
           LookupElementDecorator.withInsertHandler(lookupElement, new InsertHandler<LookupElementDecorator<LookupElement>>() {
             @Override
-            public void handleInsert(final InsertionContext context, LookupElementDecorator<LookupElement> item) {
+            public void handleInsert(@NotNull final InsertionContext context, @NotNull LookupElementDecorator<LookupElement> item) {
               lookupElement.handleInsert(context);
-
               Object object = lookupElement.getObject();
-              if ("dependency".equals(lookupElement.getLookupString()) && object instanceof XmlTag
-                  && "maven-4.0.0.xsd".equals(((XmlTag)object).getContainingFile().getName())) {
+              if (object instanceof XmlTag && "maven-4.0.0.xsd".equals(((XmlTag)object).getContainingFile().getName())) {
                 context.commitDocument();
 
                 CaretModel caretModel = context.getEditor().getCaretModel();
@@ -67,13 +65,12 @@ public class MavenPomXmlCompletionTagListenerContributor extends CompletionContr
                 XmlTag xmlTag = PsiTreeUtil.getParentOfType(psiElement, XmlTag.class);
                 if (xmlTag != null) {
                   DomElement domElement = DomManager.getDomManager(context.getProject()).getDomElement(xmlTag);
-                  if (domElement instanceof MavenDomDependency) {
+                  if (domElement instanceof MavenDomDependency || domElement instanceof MavenDomExclusion) {
                     String s = "\n<groupId></groupId>\n<artifactId></artifactId>\n";
                     context.getDocument().insertString(caretModel.getOffset(), s);
                     caretModel.moveToOffset(caretModel.getOffset() + s.length() - "</artifactId>\n".length());
 
                     context.commitDocument();
-
                     new ReformatCodeProcessor(context.getProject(), context.getFile(), xmlTag.getTextRange(), false).run();
 
                     MavenDependencyCompletionUtil.invokeCompletion(context, CompletionType.BASIC);
@@ -89,40 +86,4 @@ public class MavenPomXmlCompletionTagListenerContributor extends CompletionContr
       result.passResult(r);
     });
   }
-
-  //private static abstract class TagInsertListener {
-  //  public abstract String getTagName();
-  //
-  //  public abstract boolean isApplicable(InsertionContext context);
-  //
-  //  public abstract void onInsert(InsertionContext context);
-  //}
-
-  //private static class DomTagInsertHandler extends TagInsertListener {
-  //  private final String myTagName;
-  //
-  //  private final Class myDomClass;
-  //
-  //  private DomTagInsertHandler(String tagName, Class domClass) {
-  //    myTagName = tagName;
-  //    myDomClass = domClass;
-  //  }
-  //
-  //
-  //  @Override
-  //  public String getTagName() {
-  //    return myTagName;
-  //  }
-  //
-  //  @Override
-  //  public boolean isApplicable(InsertionContext context) {
-  //    context.get
-  //    return false;
-  //  }
-  //
-  //  @Override
-  //  public void onInsert(InsertionContext context) {
-  //
-  //  }
-  //}
 }
