@@ -1,22 +1,8 @@
-/*
- * Copyright 2000-2013 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.idea.maven.importing;
 
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import com.intellij.execution.configurations.JavaParameters;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.ReadAction;
@@ -40,17 +26,17 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.idea.maven.model.MavenArtifact;
 import org.jetbrains.idea.maven.model.MavenConstants;
 import org.jetbrains.idea.maven.project.*;
+import org.jetbrains.idea.maven.utils.MavenLog;
 import org.jetbrains.idea.maven.utils.MavenUtil;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-public class MavenModuleImporter {
-
+public final class MavenModuleImporter {
   public static final String SUREFIRE_PLUGIN_LIBRARY_NAME = "maven-surefire-plugin urls";
 
-  private static final Set<String> IMPORTED_CLASSIFIERS = ImmutableSet.of("client");
+  private static final Set<String> IMPORTED_CLASSIFIERS = Set.of("client");
 
   private static final Map<String, LanguageLevel> MAVEN_IDEA_PLUGIN_LEVELS = ImmutableMap.of(
     "JDK_1_3", LanguageLevel.JDK_1_3,
@@ -95,9 +81,12 @@ public class MavenModuleImporter {
     return myRootModelAdapter.getRootModel();
   }
 
-  public void config(boolean isNewlyCreatedModule) {
-    myRootModelAdapter = new MavenRootModelAdapter(myMavenProject, myModule, myModifiableModelsProvider);
-    myRootModelAdapter.init(isNewlyCreatedModule);
+  void setRootModelAdapter(MavenRootModelAdapter mavenRootModelAdapter) { // need for new worskapce model
+    myRootModelAdapter = mavenRootModelAdapter;
+  }
+
+  public void config(MavenRootModelAdapter mavenRootModelAdapter) {
+    myRootModelAdapter = mavenRootModelAdapter;
 
     configFolders();
     configDependencies();
@@ -111,17 +100,22 @@ public class MavenModuleImporter {
       final ModuleType moduleType = ModuleType.get(myModule);
 
       for (final MavenImporter importer : getSuitableImporters()) {
-        final MavenProjectChanges changes;
-        if (myMavenProjectChanges == null) {
-          if (importer.processChangedModulesOnly()) continue;
-          changes = MavenProjectChanges.NONE;
-        }
-        else {
-          changes = myMavenProjectChanges;
-        }
+        try {
+          final MavenProjectChanges changes;
+          if (myMavenProjectChanges == null) {
+            if (importer.processChangedModulesOnly()) continue;
+            changes = MavenProjectChanges.NONE;
+          }
+          else {
+            changes = myMavenProjectChanges;
+          }
 
-        if (importer.getModuleType() == moduleType) {
-          importer.preProcess(myModule, myMavenProject, changes, myModifiableModelsProvider);
+          if (importer.getModuleType() == moduleType) {
+            importer.preProcess(myModule, myMavenProject, changes, myModifiableModelsProvider);
+          }
+        }
+        catch (Exception e) {
+          MavenLog.LOG.error(e);
         }
       }
     });
@@ -145,14 +139,19 @@ public class MavenModuleImporter {
           }
 
           if (importer.getModuleType() == moduleType) {
-            importer.process(myModifiableModelsProvider,
-                             myModule,
-                             myRootModelAdapter,
-                             myMavenTree,
-                             myMavenProject,
-                             changes,
-                             myMavenProjectToModuleName,
-                             postTasks);
+            try {
+              importer.process(myModifiableModelsProvider,
+                               myModule,
+                               myRootModelAdapter,
+                               myMavenTree,
+                               myMavenProject,
+                               changes,
+                               myMavenProjectToModuleName,
+                               postTasks);
+            }
+            catch (Exception e) {
+              MavenLog.LOG.error(e);
+            }
           }
         }
       });
@@ -166,18 +165,23 @@ public class MavenModuleImporter {
       final ModuleType moduleType = ModuleType.get(myModule);
 
       for (final MavenImporter importer : getSuitableImporters()) {
-        final MavenProjectChanges changes;
-        if (myMavenProjectChanges == null) {
-          if (importer.processChangedModulesOnly()) continue;
-          changes = MavenProjectChanges.NONE;
-        }
-        else {
-          changes = myMavenProjectChanges;
+        try {
+          final MavenProjectChanges changes;
+          if (myMavenProjectChanges == null) {
+            if (importer.processChangedModulesOnly()) continue;
+            changes = MavenProjectChanges.NONE;
+          }
+          else {
+            changes = myMavenProjectChanges;
+          }
+
+          if (importer.getModuleType() == moduleType) {
+            importer.postProcess(myModule, myMavenProject, changes, myModifiableModelsProvider);
+          }
+        } catch(Exception e) {
+          MavenLog.LOG.error(e);
         }
 
-        if (importer.getModuleType() == moduleType) {
-          importer.postProcess(myModule, myMavenProject, changes, myModifiableModelsProvider);
-        }
       }
     });
   }
@@ -245,7 +249,8 @@ public class MavenModuleImporter {
             addAttachArtifactDependency(buildHelperCfg, scope, depProject, artifact);
           }
 
-          if (IMPORTED_CLASSIFIERS.contains(artifact.getClassifier())
+          String classifier = artifact.getClassifier();
+          if (classifier != null && IMPORTED_CLASSIFIERS.contains(classifier)
               && !isTestJar
               && !"system".equals(artifact.getScope())
               && !"false".equals(System.getProperty("idea.maven.classifier.dep"))) {
@@ -255,7 +260,7 @@ public class MavenModuleImporter {
               artifact.getVersion(),
               artifact.getBaseVersion(),
               dependencyType,
-              artifact.getClassifier(),
+              classifier,
               artifact.getScope(),
               artifact.isOptional(),
               artifact.getExtension(),
@@ -309,6 +314,7 @@ public class MavenModuleImporter {
     }
   }
 
+  //TODO: Rewrite
   private void addAttachArtifactDependency(@NotNull Element buildHelperCfg,
                                            @NotNull DependencyScope scope,
                                            @NotNull MavenProject mavenProject,
@@ -376,18 +382,27 @@ public class MavenModuleImporter {
   private void configLanguageLevel() {
     if ("false".equalsIgnoreCase(System.getProperty("idea.maven.configure.language.level"))) return;
 
+    LanguageLevel level = getLanguageLevel(myMavenProject);
+    myRootModelAdapter.setLanguageLevel(level);
+  }
+
+  public static LanguageLevel getLanguageLevel(MavenProject mavenProject) {
     LanguageLevel level = null;
 
-    Element cfg = myMavenProject.getPluginConfiguration("com.googlecode", "maven-idea-plugin");
+    Element cfg = mavenProject.getPluginConfiguration("com.googlecode", "maven-idea-plugin");
     if (cfg != null) {
       level = MAVEN_IDEA_PLUGIN_LEVELS.get(cfg.getChildTextTrim("jdkLevel"));
     }
 
     if (level == null) {
-      String mavenProjectSourceLevel = myMavenProject.getSourceLevel();
-      level = LanguageLevel.parse(mavenProjectSourceLevel);
-      if (level == null && StringUtil.isNotEmpty(mavenProjectSourceLevel)) {
-        level = LanguageLevel.JDK_X;
+      String mavenProjectReleaseLevel = mavenProject.getReleaseLevel();
+      level = LanguageLevel.parse(mavenProjectReleaseLevel);
+      if (level == null) {
+        String mavenProjectSourceLevel = mavenProject.getSourceLevel();
+        level = LanguageLevel.parse(mavenProjectSourceLevel);
+        if (level == null && (StringUtil.isNotEmpty(mavenProjectSourceLevel) || StringUtil.isNotEmpty(mavenProjectReleaseLevel))) {
+          level = LanguageLevel.HIGHEST;
+        }
       }
     }
 
@@ -396,6 +411,31 @@ public class MavenModuleImporter {
       level = LanguageLevel.JDK_1_5;
     }
 
-    myRootModelAdapter.setLanguageLevel(level);
+    if (level.isAtLeast(LanguageLevel.JDK_11)) {
+      level = adjustPreviewLanguageLevel(mavenProject, level);
+    }
+    return level;
+  }
+
+  private static LanguageLevel adjustPreviewLanguageLevel(MavenProject mavenProject, LanguageLevel level) {
+    Element compilerConfiguration = mavenProject.getPluginConfiguration("org.apache.maven.plugins", "maven-compiler-plugin");
+    if (compilerConfiguration != null) {
+      Element compilerArgs = compilerConfiguration.getChild("compilerArgs");
+      if (compilerArgs != null) {
+        if (isPreviewText(compilerArgs) ||
+            compilerArgs.getChildren("arg").stream().anyMatch(MavenModuleImporter::isPreviewText) ||
+            compilerArgs.getChildren("compilerArg").stream().anyMatch(MavenModuleImporter::isPreviewText)) {
+          try {
+            return LanguageLevel.valueOf(level.name() + "_PREVIEW");
+          }
+          catch (IllegalArgumentException ignored) { }
+        }
+      }
+    }
+    return level;
+  }
+
+  private static boolean isPreviewText(Element child) {
+    return JavaParameters.JAVA_ENABLE_PREVIEW_PROPERTY.equals(child.getTextTrim());
   }
 }
