@@ -1,3 +1,4 @@
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.tasks.youtrack;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -15,6 +16,7 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.InputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -28,8 +30,8 @@ import static com.intellij.openapi.editor.HighlighterColors.TEXT;
  * See https://confluence.jetbrains.com/display/YTD5/Intellisense+for+issue+search for format details.
  * <p/>
  * It also provides two additional classes to represent tokens highlighting and
- * available completion items from response: {@link com.intellij.tasks.youtrack.YouTrackIntellisense.HighlightRange}
- * and {@link com.intellij.tasks.youtrack.YouTrackIntellisense.CompletionItem}.
+ * available completion items from response: {@link YouTrackIntellisense.HighlightRange}
+ * and {@link YouTrackIntellisense.CompletionItem}.
  *
  * @author Mikhail Golubev
  */
@@ -51,7 +53,7 @@ public class YouTrackIntellisense {
   );
   private static final int CACHE_SIZE = 30;
 
-  private static class SizeLimitedCache<K, V> extends LinkedHashMap<K, V> {
+  private static final class SizeLimitedCache<K, V> extends LinkedHashMap<K, V> {
     private final int myMaxSize;
 
     private SizeLimitedCache(int max) {
@@ -66,7 +68,7 @@ public class YouTrackIntellisense {
   }
 
   private static final Map<Pair<String, Integer>, Response> ourCache =
-    Collections.synchronizedMap(new SizeLimitedCache<Pair<String, Integer>, Response>(CACHE_SIZE));
+    Collections.synchronizedMap(new SizeLimitedCache<>(CACHE_SIZE));
 
   @NotNull
   private static TextAttributes getAttributeByStyleClass(@NotNull String styleClass) {
@@ -110,7 +112,8 @@ public class YouTrackIntellisense {
     }
     LOG.debug("Cache " + (response != null? "hit" : "miss"));
     if (response == null) {
-      final String url = String.format("%s?filter=%s&caret=%d", INTELLISENSE_RESOURCE, URLEncoder.encode(query, "utf-8"), caret);
+      final String url = String.format("%s?filter=%s&caret=%d", INTELLISENSE_RESOURCE, URLEncoder.encode(query, StandardCharsets.UTF_8),
+                                       caret);
       final long startTime = System.currentTimeMillis();
       response = new Response(myRepository.doREST(url, false).getResponseBodyAsStream());
       LOG.debug(String.format("Intellisense request to YouTrack took %d ms to complete", System.currentTimeMillis() - startTime));
@@ -125,8 +128,8 @@ public class YouTrackIntellisense {
 
   /**
    * Main wrapper around "IntelliSense" element in YouTrack response. It delegates further parsing
-   * to {@link com.intellij.tasks.youtrack.YouTrackIntellisense.HighlightRange} and
-   * {@link com.intellij.tasks.youtrack.YouTrackIntellisense.CompletionItem}
+   * to {@link YouTrackIntellisense.HighlightRange} and
+   * {@link YouTrackIntellisense.CompletionItem}
    */
   public static class Response {
 
