@@ -16,7 +16,7 @@
 package org.intellij.lang.xpath.completion;
 
 import com.intellij.codeInsight.completion.CompletionInitializationContext;
-import com.intellij.openapi.util.Comparing;
+import com.intellij.codeInsight.lookup.LookupElement;
 import com.intellij.openapi.util.Pair;
 import com.intellij.psi.*;
 import com.intellij.psi.util.PsiTreeUtil;
@@ -32,29 +32,25 @@ import org.intellij.lang.xpath.context.VariableContext;
 import org.intellij.lang.xpath.context.XPathVersion;
 import org.intellij.lang.xpath.context.functions.Function;
 import org.intellij.lang.xpath.psi.*;
+import org.jetbrains.annotations.NotNull;
 
 import javax.xml.namespace.QName;
 import java.util.*;
 
-public class CompletionLists {
+public final class CompletionLists {
   public static final String INTELLIJ_IDEA_RULEZ = CompletionInitializationContext.DUMMY_IDENTIFIER_TRIMMED;
 
   private CompletionLists() {
   }
 
-  public static final Set<String> NODE_TYPE_FUNCS = new HashSet<>(Arrays.asList(
-    "text", "node", "comment", "processing-instruction"
-  ));
+  public static final Set<String> NODE_TYPE_FUNCS = Set.of("text", "node", "comment", "processing-instruction");
 
-  public static final Set<String> NODE_TYPE_FUNCS_V2 = new HashSet<>(Arrays.asList(
-    "text", "node", "comment", "processing-instruction", "attribute", "element", "schema-element", "schema-attribute", "document-node"
-  ));
+  public static final Set<String> NODE_TYPE_FUNCS_V2 = Set.of("text", "node", "comment", "processing-instruction", "attribute", "element", "schema-element", "schema-attribute",
+         "document-node");
 
-  public static final Set<String> OPERATORS = new HashSet<>(Arrays.asList(
-    "mul", "div", "and", "or"
-  ));
+  public static final Set<String> OPERATORS = Set.of("mul", "div", "and", "or");
 
-  public static final Set<String> AXIS_NAMES = new HashSet<>(Arrays.asList(
+  public static final Set<String> AXIS_NAMES = Set.of(
     "ancestor",
     "ancestor-or-self",
     "attribute",
@@ -68,9 +64,9 @@ public class CompletionLists {
     "preceding",
     "preceding-sibling",
     "self"
-  ));
+  );
 
-  private static final com.intellij.util.Function<String,Lookup> FUNCTION_MAPPING = s -> {
+  private static final com.intellij.util.Function<String,LookupElement> FUNCTION_MAPPING = s -> {
     if (s.equals("processing-instruction")) {
       return new FunctionLookup(s, s + "(pi-target?)");
     } else {
@@ -78,7 +74,7 @@ public class CompletionLists {
     }
   };
 
-  public static Collection<Lookup> getFunctionCompletions(XPathElement element) {
+  public static Collection<LookupElement> getFunctionCompletions(XPathElement element) {
     final XPathFile xpathFile = (XPathFile)element.getContainingFile();
 
     final ContextProvider contextProvider = ContextProvider.getContextProvider(xpathFile);
@@ -107,7 +103,7 @@ public class CompletionLists {
     }
 
     final Map<Pair<QName, Integer>, ? extends Function> functions = contextProvider.getFunctionContext().getFunctions();
-    final List<Lookup> lookups = new ArrayList<>(functions.size());
+    final List<LookupElement> lookups = new ArrayList<>(functions.size());
     for (Map.Entry<Pair<QName, Integer>, ? extends Function> entry : functions.entrySet()) {
       final Function functionDecl = entry.getValue();
       final QName f = entry.getKey().first;
@@ -130,12 +126,12 @@ public class CompletionLists {
     return lookups;
   }
 
-  public static Collection<Lookup> getVariableCompletions(XPathElement reference) {
+  public static Collection<LookupElement> getVariableCompletions(XPathElement reference) {
     final ContextProvider contextProvider = ContextProvider.getContextProvider(reference);
     final VariableContext resolver = contextProvider.getVariableContext();
     if (resolver != null) {
       final Object[] variablesInScope = resolver.getVariablesInScope(reference);
-      final List<Lookup> lookups = new ArrayList<>(variablesInScope.length);
+      final List<LookupElement> lookups = new ArrayList<>(variablesInScope.length);
       for (final Object o : variablesInScope) {
         if (o instanceof PsiNamedElement) {
           final String type;
@@ -152,7 +148,7 @@ public class CompletionLists {
           final String name = ((PsiNamedElement)o).getName();
           lookups.add(new VariableLookup("$" + name, type, ((PsiNamedElement)o).getIcon(0), (PsiElement)o));
         } else {
-          lookups.add(new VariableLookup("$" + String.valueOf(o), PlatformIcons.VARIABLE_ICON));
+          lookups.add(new VariableLookup("$" + o, PlatformIcons.VARIABLE_ICON));
         }
       }
       return lookups;
@@ -161,7 +157,7 @@ public class CompletionLists {
     }
   }
 
-  public static Collection<Lookup> getNodeTestCompletions(final XPathNodeTest element) {
+  public static Collection<LookupElement> getNodeTestCompletions(final XPathNodeTest element) {
     if (!element.isNameTest()) {
       return Collections.emptyList();
     }
@@ -179,7 +175,7 @@ public class CompletionLists {
 
     final boolean insidePrefix = suffix.contains(INTELLIJ_IDEA_RULEZ + ":");
 
-    final Set<Lookup> list = new HashSet<>();
+    final Set<LookupElement> list = new HashSet<>();
     addNameCompletions(contextProvider, element, list);
 
     final String namespacePrefix = prefixedName.getPrefix();
@@ -225,7 +221,7 @@ public class CompletionLists {
     return list;
   }
 
-  private static XPathNodeTest.PrincipalType addContextNames(XPathNodeTest element, ContextProvider contextProvider, PrefixedName prefixedName, Set<Lookup> list) {
+  private static XPathNodeTest.PrincipalType addContextNames(XPathNodeTest element, ContextProvider contextProvider, PrefixedName prefixedName, Set<? super LookupElement> list) {
     final NamespaceContext namespaceContext = contextProvider.getNamespaceContext();
     final XmlElement context = contextProvider.getContextElement();
 
@@ -270,7 +266,7 @@ public class CompletionLists {
     return (p != null && p.length() > 0 ? p + ":" : "");
   }
 
-  private static void addNamespaceCompletions(NamespaceContext namespaceContext, Set<Lookup> list, XmlElement context) {
+  private static void addNamespaceCompletions(NamespaceContext namespaceContext, Set<? super LookupElement> list, XmlElement context) {
     if (namespaceContext != null) {
       final Collection<String> knownPrefixes = namespaceContext.getKnownPrefixes(context);
       for (String prefix : knownPrefixes) {
@@ -281,7 +277,7 @@ public class CompletionLists {
     }
   }
 
-  private static void addNameCompletions(ContextProvider contextProvider, final XPathNodeTest element, final Set<Lookup> list) {
+  private static void addNameCompletions(ContextProvider contextProvider, final XPathNodeTest element, final Set<? super LookupElement> list) {
     final PrefixedName prefixedName = element.getQName();
     final XPathNodeTest.PrincipalType principalType = element.getPrincipalType();
 
@@ -292,7 +288,8 @@ public class CompletionLists {
 
     for (PsiFile xpathFile : files) {
       xpathFile.accept(new PsiRecursiveElementVisitor() {
-        public void visitElement(PsiElement e) {
+        @Override
+        public void visitElement(@NotNull PsiElement e) {
           if (e instanceof XPathNodeTest) {
             final XPathNodeTest nodeTest = (XPathNodeTest)e;
 
@@ -302,7 +299,7 @@ public class CompletionLists {
               if (_prefixedName != null && prefixedName != null) {
                 final String localName = _prefixedName.getLocalName();
                 if (!"*".equals(localName) && !localName.contains(INTELLIJ_IDEA_RULEZ)) {
-                  if (Comparing.equal(_prefixedName.getPrefix(), prefixedName.getPrefix())) {
+                  if (Objects.equals(_prefixedName.getPrefix(), prefixedName.getPrefix())) {
                     list.add(new NodeLookup(localName, _principalType));
                   } else if (prefixedName.getPrefix() == null) {
                     list.add(new NodeLookup(_prefixedName.toString(), _principalType));
@@ -339,15 +336,15 @@ public class CompletionLists {
     return uri.equals(namespaceURI);
   }
 
-  public static Collection<Lookup> getNodeTypeCompletions(XPathElement context) {
+  public static Collection<LookupElement> getNodeTypeCompletions(XPathElement context) {
     final Set<String> funcs = context.getXPathVersion() == XPathVersion.V1 ?
             NODE_TYPE_FUNCS : NODE_TYPE_FUNCS_V2;
 
     return ContainerUtil.map(funcs, FUNCTION_MAPPING);
   }
 
-  public static Collection<Lookup> getAxisCompletions() {
-    final ArrayList<Lookup> lookups = new ArrayList<>(AXIS_NAMES.size());
+  public static Collection<LookupElement> getAxisCompletions() {
+    final ArrayList<LookupElement> lookups = new ArrayList<>(AXIS_NAMES.size());
     for (String s : AXIS_NAMES) {
       lookups.add(new AxisLookup(s));
     }
@@ -356,7 +353,7 @@ public class CompletionLists {
 
   @SuppressWarnings({"RawUseOfParameterizedType"})
   public static Class[] getAllInterfaces(Class<?> clazz) {
-    Set<Class> set = new HashSet<>();
+    Set<Class<?>> set = new HashSet<>();
     do {
       ContainerUtil.addAll(set, clazz.getInterfaces());
       clazz = clazz.getSuperclass();
